--- a/collated/test/A0125509H.md
+++ b/collated/test/A0125509H.md
@@ -1,14 +1,6 @@
-package guitests;
-
-import static taskle.commons.core.Messages.MESSAGE_INVALID_COMMAND_FORMAT;
-
-import org.junit.Test;
-
-import taskle.commons.core.Messages;
-import taskle.commons.exceptions.IllegalValueException;
-import taskle.logic.commands.DoneCommand;
-
-//@@author A0125509H
+# A0125509H
+###### \java\guitests\DoneCommandTest.java
+``` java
 
 public class DoneCommandTest extends TaskManagerGuiTest {
     
@@ -71,3 +63,4 @@ public class DoneCommandTest extends TaskManagerGuiTest {
         assertUnsuccessfulMessage(Messages.MESSAGE_UNKNOWN_COMMAND);
     }
 }
+```
