Update Collate Folder

--- a/collated/docs/A0141780J.md
+++ b/collated/docs/A0141780J.md
@@ -1,4 +1,84 @@
 # A0141780J
+###### \AboutUs.md
+``` md
+
+# About Us
+
+We are from team W14-C3. 
+
+## Project Team
+
+#### [Abel Lim](http://github.com/abellimz) <br>
+<img src="images/AbelLim.jpg" width="150"><br>
+* Role: Team Lead  
+* Components in charge of: Logic  
+* Aspects/tools in charge of: Git, Scheduling & Tracking  
+* Features implemented: 
+	* [Adding events](https://github.com/CS2103AUG2016-W14-C3/main/blob/master/docs/UserGuide.md#add-a-task--event-add)
+	* [Adding deadlines](https://github.com/CS2103AUG2016-W14-C3/main/blob/master/docs/UserGuide.md#add-a-task--event-add)
+	* [Finding tasks by keywords and statuses](https://github.com/CS2103AUG2016-W14-C3/main/blob/master/docs/UserGuide.md#finding-a-task--find)
+	* [Listing tasks by keywords and statuses](https://github.com/CS2103AUG2016-W14-C3/main/blob/master/docs/UserGuide.md#listing-tasks-list)
+* Code written: 
+	* [[Functional Code](https://github.com/CS2103AUG2016-W14-C3/main/blob/master/collated/main/A0141780J.md)]
+	* [[Test code](https://github.com/CS2103AUG2016-W14-C3/main/blob/master/collated/test/A0141780J.md)]
+	* [[Docs](https://github.com/CS2103AUG2016-W14-C3/main/blob/master/collated/docs/A0141780J.md)]
+
+-----
+
+#### [Ong Zhi Yong](http://github.com/zhiyong4113)
+<img src="images/OngZhiYong.jpg" width="150"><br>
+* Role: Quality Assurance, Deliverables & Deadlines  
+* Components in charge of: Storage
+* Aspects/tools in charge of: Travis CI, Testing
+* Features implemented: 
+	* [Editing task](https://github.com/CS2103AUG2016-W14-C3/main/blob/master/docs/UserGuide.md#edit-a-task--edit-reschedule-remind)
+	* [Reschedule task](https://github.com/CS2103AUG2016-W14-C3/main/blob/master/docs/UserGuide.md#edit-a-task--edit-reschedule-remind)
+	* [Setting reminders](https://github.com/CS2103AUG2016-W14-C3/main/blob/master/docs/UserGuide.md#edit-a-task--edit-reschedule-remind)
+* Code written: 
+	* [[Functional Code](https://github.com/CS2103AUG2016-W14-C3/main/blob/master/collated/main/A0139402M.md)]
+	* [[Test code](https://github.com/CS2103AUG2016-W14-C3/main/blob/master/collated/test/A0139402M.md)]
+	* [[Docs](https://github.com/CS2103AUG2016-W14-C3/main/blob/master/collated/docs/A0139402M.md)]
+
+-----
+
+#### [Hamsyari](http://github.com/hamsyari) 
+<img src="images/Hamsyari.jpg" width="150"><br>
+* Role: Code Quality & Documentation <br>  
+* Components in charge of: Model
+* Aspects/tools in charge of: Code review, documentation content.
+* Features implemented:
+	* [Undo command](https://github.com/CS2103AUG2016-W14-C3/main/blob/master/docs/UserGuide.md#undoing-a-recent-command-undo)
+	* [Redo command](https://github.com/CS2103AUG2016-W14-C3/main/blob/master/docs/UserGuide.md#undoing-a-recent-command-redo)
+	* Setting save file directory
+* Code written: 
+	* [[Functional Code](https://github.com/CS2103AUG2016-W14-C3/main/blob/master/collated/main/A0140047U.md)]
+	* [[Test code](https://github.com/CS2103AUG2016-W14-C3/main/blob/master/collated/test/A0140047U.md)]
+	* [[Docs](https://github.com/CS2103AUG2016-W14-C3/main/blob/master/collated/docs/A0140047U.md)]
+
+
+-----
+
+#### [Silfer Goh](http://github.com/Silfer)
+<img src="images/GohYuanTat.jpg" width="150"><br>
+* Role: GUI Design  
+* Components in charge of: UI and Main
+* Aspects/tools in charge of: UI mockups and design
+* Features implemented:
+	* [Mark task as done](https://github.com/CS2103AUG2016-W14-C3/main/blob/master/docs/UserGuide.md#mark-a-task-as-done-done)
+	* [Multiple removal of tasks](https://github.com/CS2103AUG2016-W14-C3/main/blob/master/docs/UserGuide.md#remove-a-task-remove)
+* Code written: 
+	* [[Functional Code](https://github.com/CS2103AUG2016-W14-C3/main/blob/master/collated/main/A0125509H.md)]
+	* [[Test code](https://github.com/CS2103AUG2016-W14-C3/main/blob/master/collated/test/A0125509H.md)]
+	* [[Docs](https://github.com/CS2103AUG2016-W14-C3/main/blob/master/collated/docs/A0125509H.md)]
+
+-----
+
+#### [Michelle Tan](http://github.com/michelletan) <br>
+<img src="images/MichelleTan.jpg" width="150"><br>
+Role: Mentor <br>  
+
+-----
+```
 ###### \DeveloperGuide.md
 ``` md
 
@@ -150,12 +230,6 @@ Priorities: High (Very likely) - `* * *`, Medium (Likely) - `* *`, Low (Unlikely
 |      | `*`     | user | add reminders for my tasks                 | I would be reminded of my tasks when needed |
 |      | `*`     | user | delete reminders for my tasks              | I can remove reminders when they are not needed |
 |      | `*`     | user | edit reminders for my tasks                | I can change reminders when needed without removing and adding them again |
-| Epic |         | user | manage tags for my tasks                   |                                 |
-|      | `*`     | user | add tags to my tasks                       | I can label or categorize my tasks |
-|      | `*`     | user | delete tags for my tasks                   | I can remove tags when they are not needed |
-|      | `*`     | user | edit tags for my tasks                     | I can change tags when needed without removing and adding them again |
-| Epic |         | user | manage recurring tasks                     |                                 |
-|      | `*`     | user | add tasks that have to be done on a regular basis | I do not have to add them again |
 | Epic |         | user | make changes to my application configuration | I can customize it to suit my needs | 
 |      | `* * *` | user | specify a specific folder as the data storage location                       | I can save the data file into any directory I want |
 |      | `*`     | user | switch to using another existing data storage file                           | I can reuse my data storage file from another device or session |
@@ -202,7 +276,7 @@ Taskle makes it elegantly simple to manage your tasks. All of its features requi
 
 | Format  
 | :-------- 
-| `add `**`task_name`** | 
+| `add `**`task_name`**` [remind `**`date time`**`]` | 
 | `add `**`deadline_name`**` by `**`date`**` [`**`time`**`] [remind `**`date time`**`]` |
 | `add `**`event_name`**` from `**`date`**`[`**`time`**`] to `**`date`**` [`**`time`**`] [remind `**`date time`**`]`
 
@@ -240,12 +314,14 @@ Note the following conventions used:
 
 Command `(Shortcut)` | Format  
 :-------- | :-------- 
-Add `a` | `add `**`task_name`**  
- | `add `**`deadline_name`**` by `**`date`**` [`**`time`**`] [remind `**`date time`**`]` 
- |`add ` **`event_name`**` from `**`date`** ` [`**`time`**`] to `**`date`**` [`**`time`**`] [remind `**`date time`**`]`  
-Edit Description `e` | `edit `**`task_number new_task_name`**
+Add `a` | `add `**`task_name`**` [remind `**`date time`**`]`
+ 		| `add `**`deadline_name`**` by `**`date`**` [`**`time`**`] [remind `**`date time`**`]` 
+ 		| `add `**`event_name`**` on ` **`date`**` [`**`time`**`] [remind `**`date time`**`]`|
+ 		|`add ` **`event_name`**` from `**`date`** ` [`**`time`**`] to `**`date`**` [`**`time`**`] [remind `**`date time`**`]`  
+
+Edit Description `rn` | `rename `**`task_number new_task_name`**
 Reschedule `rs` | `reschedule `**`task_number` `date`**` [`**`time`**`] to ` **`date`**`[`**`time`**`] [remind `**`date time`**`]`
-Set Reminder `s` | `remind `**`task_number date time`**
+Set Reminder `rmd` | `remind `**`task_number date time`**
 Remove `rm` | `remove `**`task_number`**
 Find `f` | `find `**`search_query`**` [`**`-status`**`]`
 List `l` | `list [`**`-status`**`]`
@@ -253,6 +329,8 @@ Mark as Done `d` | `done `**`task_number`**
 Undo `u` | `undo`
 Redo `r` | `redo`
 Clear | `clear`
+Change Directory `cd` | `changedirectory`
+Open Data File `of` | `open file`
 Help `h` | `help`
 Exit | `exit`
 ```
