--- a/collated/main/A0125509H.md
+++ b/collated/main/A0125509H.md
@@ -24,6 +24,8 @@
 
     @Override
     public CommandResult execute() {
+        model.storeTaskManager();
+        
         for(int i=0; i<arraySize; i++) {
             UnmodifiableObservableList<ReadOnlyTask> lastShownList = model.getFilteredTaskList();
     
@@ -35,7 +37,6 @@
             ReadOnlyTask taskToDelete = lastShownList.get(sInt.get(i) - 1);
     
             try {
-                model.storeTaskManager();
                  model.deleteTask(taskToDelete);
             } catch (TaskNotFoundException pnfe) {
                 assert false : "The target task cannot be missing";
@@ -46,11 +47,6 @@
         return new CommandResult(String.format(MESSAGE_DELETE_TASK_SUCCESS, message), true);
     }
     
-    @Override
-    public String getCommandWord() {
-        return COMMAND_WORD;
-    }
-
 }
 ```
 ###### \java\taskle\logic\parser\DoneCommandParser.java
@@ -58,8 +54,10 @@
 public class DoneCommandParser extends CommandParser {
 
     @Override
-    public String getCommandWord() {
-        return DoneCommand.COMMAND_WORD;
+    public boolean canParse(String commandWord) {
+        assert (commandWord != null && !commandWord.isEmpty());
+        return commandWord.equals(DoneCommand.COMMAND_WORD)
+               || commandWord.equals(DoneCommand.COMMAND_WORD_SHORT);
     }
 
     @Override
@@ -131,6 +129,7 @@ public class DoneCommandParser extends CommandParser {
 ###### \java\taskle\model\task\Task.java
 ``` java
     protected boolean isTaskDone;
+    
 ```
 ###### \java\taskle\model\task\Task.java
 ``` java
@@ -144,6 +143,7 @@ public class DoneCommandParser extends CommandParser {
     public void setTaskDone(boolean taskDone) {
         this.isTaskDone = taskDone;
     }
+    
 ```
 ###### \java\taskle\model\task\TaskList.java
 ``` java
