--- a/collated/main/A0139402M.md
+++ b/collated/main/A0139402M.md
@@ -1,4 +1,80 @@
 # A0139402M
+###### \java\taskle\commons\util\TaskUtil.java
+``` java
+
+public class TaskUtil {
+    
+    /**
+     * Method to return an EventTask from the given DeadlineTask
+     * @param source
+     * @return
+     */
+    public static EventTask deadlineChangeToEvent(DeadlineTask source) {
+        assert source != null;
+        assert source.getDeadlineDate() != null;
+        
+        EventTask eventTask = new EventTask(source);
+        eventTask.setStartDate(source.getDeadlineDate());
+        eventTask.setEndDate(source.getDeadlineDate());
+        return eventTask;
+    }
+    
+    /**
+     * Method to return a FloatTAsk from the given DeadlineTask
+     * @param source
+     * @return
+     */
+    public static FloatTask deadlineChangeToFloat(DeadlineTask source) {
+        assert source != null;
+        return new FloatTask(source);
+    }
+    
+    /**
+     * Method to return a DeadlineTask from the given EventTask
+     * @param source
+     * @return DeadlineTask
+     */
+    public static DeadlineTask eventChangeToDeadline(EventTask source) {
+        assert source != null;
+        assert source.getStartDate() != null || source.getEndDate() != null;
+        
+        DeadlineTask deadlineTask = new DeadlineTask(source);
+        deadlineTask.setDeadlineDate(source.getStartDate());
+        return deadlineTask;
+    }
+    
+    /**
+     * Method to return a FloatTask from the given EventTask
+     * @param source
+     * @return
+     */
+    public static FloatTask eventChangeToFloat(EventTask source) {
+        assert source != null;
+        return new FloatTask(source);  
+    }
+    
+    /**
+     * Method to return a float task from the given deadline task
+     * @param source
+     * @return DeadlineTask
+     */
+    public static DeadlineTask floatChangeToDeadline(FloatTask source) {
+        assert source != null;
+        return new DeadlineTask(source);
+    }
+    
+    /**
+     * Method to return a float task from the given event task
+     * @param source
+     * @return
+     */
+    public static EventTask floatChangeToEvent (FloatTask source) {
+        assert source != null;
+        return new EventTask(source);
+    }
+    
+}
+```
 ###### \java\taskle\logic\commands\EditCommand.java
 ``` java
 /**
@@ -6,17 +82,22 @@
  * manager.
  * @author zhiyong 
  */
+```
+###### \java\taskle\logic\commands\EditCommand.java
+``` java
 public class EditCommand extends Command {
 
-    public static final String COMMAND_WORD = "edit";
+    public static final String COMMAND_WORD = "rename";
 
+    public static final String COMMAND_WORD_SHORT = "rn";
+    
     public static final String MESSAGE_USAGE = COMMAND_WORD
-            + ": Edits the Task identified by the index number used in the last Task listing.\n"
-            + "Format: edit task_number new_task\n" + "Example: " + COMMAND_WORD + " 1 Buy dinner";
+            + ": Edits an existing task in Taskle.\n"
+            + "\nFormat: edit task_number new_task_name\n" + "\nExample: " + COMMAND_WORD + " 6 Pay Abel for Chicken Rice";
 
-    public static final String MESSAGE_EDIT_TASK_SUCCESS = "Edited Task: %1$s";
+    public static final String MESSAGE_EDIT_TASK_SUCCESS = "Renamed Task: %1$s";
 
-    public static final String MESSAGE_DUPLICATE_TASK = "This task already exists in the Task Manager";
+    public static final String MESSAGE_DUPLICATE_TASK = "This task already exists in Taskle!";
 
     public final int targetIndex;
 
@@ -34,12 +115,12 @@ public class EditCommand extends Command {
             indicateAttemptToExecuteIncorrectCommand(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
             return new CommandResult(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX, false);
         }
-
-        ReadOnlyTask taskToEdit = lastShownList.get(targetIndex - 1);
-        String oldName = taskToEdit.getName().fullName;
+        int offsetIndex = targetIndex - 1;
+        ReadOnlyTask taskToEdit = lastShownList.get(offsetIndex);
+        String oldName = taskToEdit.getName().fullName; 
         try {
             model.storeTaskManager();
-            model.editTask(targetIndex, newName);
+            model.editTask(offsetIndex, newName);
         } catch (TaskNotFoundException pnfe) {
             assert false : "The target task cannot be missing";
         }
@@ -50,15 +131,65 @@ public class EditCommand extends Command {
                 true);
     }
     
-    @Override
-    public String getCommandWord() {
-        return COMMAND_WORD;
-    }
-    
     public int getIndex() {
         return targetIndex;
     }
 
+}
+```
+###### \java\taskle\logic\commands\RemindCommand.java
+``` java
+public class RemindCommand extends Command {
+    
+    public static final String COMMAND_WORD = "remind";
+    public static final String COMMAND_WORD_SHORT = "rmd";
+
+    public static final String MESSAGE_USAGE = COMMAND_WORD
+            + ": Either edits or removes the reminder date and time of an existing task in Taskle."
+            + "\nIf only the reminder date but not the time is entered, the reminder time will default to 00:00 of the reminder date.\n"
+            + "\nFormat: " + COMMAND_WORD + " task_number [date time]\nor\n" + COMMAND_WORD + " task_number clear" 
+            + "\n\nExample: " 
+            + COMMAND_WORD + " 1 29 Nov 3pm (To Edit the Reminder Date and Time)\t\nor\n"
+            + COMMAND_WORD + " 1 clear (To Remove the Reminder)";
+
+    public static final String MESSAGE_EDIT_TASK_SUCCESS = "Set Reminder Date: %1$s";
+
+    public final int targetIndex;
+
+    public final Date remindDate;
+
+    public RemindCommand(int targetIndex, Date remindDate) throws IllegalValueException {
+        assert remindDate != null;
+        this.targetIndex = targetIndex; 
+        this.remindDate = remindDate;
+    }
+
+    @Override
+    public CommandResult execute() {
+        UnmodifiableObservableList<ReadOnlyTask> lastShownList = model.getFilteredTaskList();
+        
+        if (lastShownList.size() < targetIndex) {
+            indicateAttemptToExecuteIncorrectCommand(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
+            return new CommandResult(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX, false);
+        }
+        int offsetIndex = targetIndex - 1;
+        ReadOnlyTask taskToEdit = lastShownList.get(offsetIndex);
+        String oldRemindDate = taskToEdit.getRemindDetailsString();
+        try {
+            model.storeTaskManager();
+            String result = model.editTaskRemindDate(offsetIndex, remindDate);
+            if(result != null) {
+                indicateAttemptToExecuteIncorrectCommand(String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, result));
+                return new CommandResult(String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, result), false);
+            }
+        } catch (TaskNotFoundException pnfe) {
+            assert false : "The target task cannot be missing";
+        }
+
+        ReadOnlyTask newTask = lastShownList.get(offsetIndex);
+        return new CommandResult(String.format(MESSAGE_EDIT_TASK_SUCCESS, taskToEdit.getName() + " " 
+                                            + oldRemindDate + " -> " + newTask.getRemindDetailsString()), true);
+    }    
 }
 ```
 ###### \java\taskle\logic\commands\RescheduleCommand.java
@@ -69,15 +200,20 @@ public class EditCommand extends Command {
  * @author zhiyong
  *
  */
+```
+###### \java\taskle\logic\commands\RescheduleCommand.java
+``` java
 public class RescheduleCommand extends Command{
 
     public static final String COMMAND_WORD = "reschedule";
+    public static final String COMMAND_WORD_SHORT = "rs";
 
     public static final String MESSAGE_USAGE = COMMAND_WORD
-            + ": Reschedules or remove the date of the Task identified by the index number used in the last Task listing.\n"
-            + "Format: " + COMMAND_WORD + " task_number to new_date new_time(optional)\n" + "Example: " 
-            + COMMAND_WORD + " 1 to 11 Nov 3pm --- for rescheduling\tOR\t"
-            + COMMAND_WORD + " 1 clear --- for removing the date";
+            + ": Either reschedules or removes the deadline of an existing task in Taskle.\n"
+            + "\nFormat: " + COMMAND_WORD + " task_number to [date time] [remind date time]\n"
+            + "or \n" + COMMAND_WORD + " task_number clear\n"
+            + "\nExample: " + COMMAND_WORD + " 2 to 7th October 7pm remind 6th October 7pm \nor\t\n"
+            + COMMAND_WORD + " 1 clear (To Remove Deadline)";
 
     public static final String MESSAGE_EDIT_TASK_SUCCESS = "Rescheduled Task: %1$s";
 
@@ -101,18 +237,16 @@ public class RescheduleCommand extends Command{
         int offsetIndex = targetIndex - 1;
         ReadOnlyTask taskToEdit = lastShownList.get(offsetIndex);
         String oldDetails = taskToEdit.getDetailsString();
-        int newIndex = -1;
         try {
             model.storeTaskManager();
-            model.editTaskDate(targetIndex, dates);
+            model.editTaskDate(offsetIndex, dates);
         } catch (TaskNotFoundException pnfe) {
             assert false : "The target task cannot be missing";
         }
         String newDate = getDateString(dates);
         return new CommandResult(
-                String.format(MESSAGE_EDIT_TASK_SUCCESS, 
-                              taskToEdit.getName() + "\t" + oldDetails 
-                              + " -> " + newDate),
+                String.format(MESSAGE_EDIT_TASK_SUCCESS, taskToEdit.getName() + " " 
+                        + oldDetails + " -> " + newDate),
                 true);
     }
     
@@ -133,11 +267,6 @@ public class RescheduleCommand extends Command{
         return newDate;
     }
 
-    @Override
-    public String getCommandWord() {
-        return COMMAND_WORD;
-    }
-
 }
 ```
 ###### \java\taskle\logic\parser\EditCommandParser.java
@@ -146,14 +275,19 @@ public class RescheduleCommand extends Command{
  * EditCommandParser class to handle parsing of commands
  *
  */
+```
+###### \java\taskle\logic\parser\EditCommandParser.java
+``` java
 public class EditCommandParser extends CommandParser {
 
     public EditCommandParser() {
     }
 
     @Override
-    public String getCommandWord() {
-        return EditCommand.COMMAND_WORD;
+    public boolean canParse(String commandWord) {
+        assert (commandWord != null && !commandWord.isEmpty());
+        return commandWord.equals(EditCommand.COMMAND_WORD)
+               || commandWord.equals(EditCommand.COMMAND_WORD_SHORT);
     }
 
     @Override
@@ -194,17 +328,80 @@ public class EditCommandParser extends CommandParser {
     }
 }
 ```
+###### \java\taskle\logic\parser\RemindCommandParser.java
+``` java
+public class RemindCommandParser extends CommandParser{
+    
+
+    @Override
+    public boolean canParse(String commandWord) {
+        assert (commandWord != null && !commandWord.isEmpty());
+        return commandWord.equals(RemindCommand.COMMAND_WORD)
+               || commandWord.equals(RemindCommand.COMMAND_WORD_SHORT);
+    }
+
+    @Override
+    public Command parseCommand(String args) {
+        return prepareRemind(args.trim());
+    }
+
+    /**
+     * Prepares the remind command while checking for any possible errors in
+     * the input given by the user.
+     * 
+     * @param args
+     * @return the prepared reschedule command
+     */
+    private Command prepareRemind(String args) {
+        int endIndex = args.indexOf(" ");
+        if (endIndex == -1) {
+            return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, RemindCommand.MESSAGE_USAGE));
+        }
+        String indexValue = args.substring(0, endIndex);
+        Optional<Integer> index = parseIndex(indexValue);
+        String newRemindDateTime = args.substring(endIndex).trim();
+        if (!index.isPresent()) {
+            return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, RemindCommand.MESSAGE_USAGE));
+        }
+        
+        if (newRemindDateTime.indexOf("clear") == 0) {
+            clearRemind(index);
+        }
+        
+        List<Date> dates = DateParser.parse(newRemindDateTime);
+        if(dates.size() != 1) {
+            return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, RemindCommand.MESSAGE_USAGE));
+        }
+        try {
+            assert dates.size() == 1;
+            return new RemindCommand(index.get(), dates.get(0));
+        } catch (IllegalValueException e) {
+            return new IncorrectCommand(e.getMessage());
+        }
+
+    }
+    
+    private Command clearRemind(Optional<Integer> index) {
+        try {
+            return new RemindCommand(index.get(), null);
+        } catch (IllegalValueException e) {
+            return new IncorrectCommand(e.getMessage());
+        }
+    }
+}
+```
 ###### \java\taskle\logic\parser\RescheduleCommandParser.java
 ``` java
-
 public class RescheduleCommandParser extends CommandParser {
 
     public RescheduleCommandParser() {
     }
 
     @Override
-    public String getCommandWord() {
-        return RescheduleCommand.COMMAND_WORD;
+    public boolean canParse(String commandWord) {
+        assert (commandWord != null && !commandWord.isEmpty());
+        return commandWord.equals(RescheduleCommand.COMMAND_WORD)
+               || commandWord.equals(RescheduleCommand.COMMAND_WORD_SHORT);
     }
 
     @Override
@@ -252,5 +449,435 @@ public class RescheduleCommandParser extends CommandParser {
 
     }
 
+}
+```
+###### \java\taskle\model\Model.java
+``` java
+    /** Deletes the given task. */
+    void deleteTask(ReadOnlyTask target) throws TaskList.TaskNotFoundException;
+
+    /** Edits the given task. */
+    void editTask(int index, Name newName) throws TaskList.TaskNotFoundException;
+    
+    /** Edits the date / time of the task */
+    void editTaskDate(int index, List<Date> dates) throws TaskList.TaskNotFoundException;
+   
+    /** Edits / Sets the reminder date of the task */
+    String editTaskRemindDate(int index, Date date) throws TaskList.TaskNotFoundException;
+    
+    /** Verifies the reminder date with the current date */
+    List<Task> verifyRemindDate(Date currentDateTime);
+    
+    /** Dismiss the reminders */
+    void dismissReminder(Date currentDateTime);
+    
+```
+###### \java\taskle\model\ModelManager.java
+``` java
+    @Override
+
+    public synchronized void editTask(int index, Name newName) throws TaskNotFoundException {
+        int sourceIndex = filteredTasks.getSourceIndex(index);
+        taskManager.editTask(sourceIndex, newName);;
+        indicateTaskManagerChanged();
+    }
+    
+    @Override
+    public synchronized void editTaskDate(int index, List<Date> dates) throws TaskNotFoundException{
+        int sourceIndex = filteredTasks.getSourceIndex(index);
+        taskManager.editTaskDate(sourceIndex, dates);
+        indicateTaskManagerChanged();
+    }
+    
+    @Override
+    public synchronized String editTaskRemindDate(int index, Date date) throws TaskNotFoundException{
+        int sourceIndex = filteredTasks.getSourceIndex(index);
+        String message = taskManager.editTaskRemindDate(sourceIndex, date);
+        indicateTaskManagerChanged();
+        return message;
+    }
+    
+    @Override
+    public synchronized List<Task> verifyRemindDate(Date currentDateTime) {
+        return taskManager.verifyReminder(currentDateTime);
+    }
+    
+    @Override
+    public synchronized void dismissReminder(Date currentDateTime) {
+        taskManager.dismissReminder(currentDateTime);
+        indicateTaskManagerChanged();
+    }
+    
+```
+###### \java\taskle\model\task\Task.java
+``` java
+    protected Date remindDate;
+    
+```
+###### \java\taskle\model\task\Task.java
+``` java
+    @Override
+    public Date getRemindDate() {
+        return remindDate;
+    }
+    
+    public void setRemindDate(Date remindDate) {
+        this.remindDate = remindDate;
+    }
+```
+###### \java\taskle\model\task\TaskList.java
+``` java
+    /**
+     * Edits the equivalent task in the list.
+     * 
+     * @param toEdit
+     * @return
+     */
+    public void edit(int index, Name newName) {
+        Task toEdit = internalList.get(index);
+        FloatTask testTask = new FloatTask(toEdit);
+        testTask.setName(newName);
+
+        toEdit.setName(newName);
+        internalList.set(index, toEdit);
+        logger.info("Task " + index + " edited to " + newName);
+        refreshInternalList();
+    }
+
+    /**
+     * Edits the date / time of the equivalent task in the list. For null, it
+     * modifies the task into a float task without any dates. For 1 date in the
+     * List, it modifies the task into a deadline task with the appropriate
+     * deadline date. For 2 dates, it modifies it into an event task with the
+     * appropriate start and end dates.
+     * 
+     * @param index
+     * @param dates
+     */
+    public void editDate(int index, List<Date> dates) throws TaskNotFoundException {
+        Optional<Task> toEditOp = Optional.of(internalList.get(index));
+        if (!toEditOp.isPresent()) {
+            throw new TaskNotFoundException();
+        }
+
+        Task toEdit = toEditOp.get();
+        if (dates == null) {
+            updateListFloat(toEdit, index);
+        } else if (dates.size() == 1) {
+            updateListDeadline(toEdit, index, dates);
+        } else if (dates.size() == 2) {
+            updateListEvent(toEdit, index, dates);
+        } else {
+            logger.severe("Number of dates is either 0 or exceed 2. Unable to update.");
+        }
+        refreshInternalList();
+    }
+
+    /**
+     * Edits the reminder date for the task in the list
+     * 
+     * @param index
+     * @param date
+     * @throws TaskNotFoundException
+     */
+    public String editRemindDate(int index, Date date) throws TaskNotFoundException {
+        Optional<Task> toEditOp = Optional.of(internalList.get(index));
+
+        if (!toEditOp.isPresent()) {
+            throw new TaskNotFoundException();
+        }
+        Task toEdit = toEditOp.get();
+        
+        if(checkInvalidRemindDate(toEdit, date)) {
+            return Messages.MESSAGE_REMINDER_AFTER_FINAL_DATE;
+        }
+        toEdit.setRemindDate(date);
+        internalList.set(index, toEdit);
+        logger.info("Task " + index + " edited reminder date to " + toEdit.getRemindDetailsString());
+        return null;
+    }
+    
+    /**
+     * Method to check if the reminder date is after the end date of the task 
+     * @param task
+     * @param remindDate
+     * @return
+     */
+    private boolean checkInvalidRemindDate(Task task, Date remindDate) {
+        if(task instanceof DeadlineTask) {
+            if(remindDate.after(((DeadlineTask) task).getDeadlineDate())) {
+                return true;
+            }
+            return false;
+        }
+        if(task instanceof EventTask) {
+            if(remindDate.after(((EventTask) task).getEndDate())) {
+                return true;
+            }
+            return false;
+        }
+        return false;
+    }
+    /**
+     * Method to check through the current list of reminders for each task
+     * and compare with the current system date time.
+     * @param currentDateTime
+     * @return list of reminders that are before the current system date time
+     */
+    public List<Task> verifyRemindDate(Date currentDateTime) {
+        List<Task> remindTaskList = new ArrayList<>();
+        for (int i = 0; i < internalList.size(); i++) {
+            Task currentTask = internalList.get(i);
+            Date remindDate = currentTask.getRemindDate();
+            if (remindDate != null) {
+                if (currentDateTime.after(remindDate)) {
+                    remindTaskList.add(currentTask);
+                }
+            }
+        }
+        logger.info("Return List of Tasks to be Reminded. Size: " + remindTaskList.size());
+        return remindTaskList;
+    }
+
+    /**
+     * Sets the visibility of the list of reminders given.
+     * @param tasks
+     * @param isVisible
+     */
+    public void dismissReminder(Date currentDateTime) {
+        assert currentDateTime != null;
+        for (int i = 0; i < internalList.size(); i++) {
+            Task currentTask = internalList.get(i);
+            Date remindDate = currentTask.getRemindDate();
+            if (remindDate != null) {
+                if (currentDateTime.after(remindDate)) {
+                    currentTask.setRemindDate(null);
+                    internalList.set(i, currentTask);
+                }
+            }
+        }
+        logger.info("Tasks with reminders past have reminders removed.");
+    }
+    
+```
+###### \java\taskle\model\TaskManager.java
+``` java
+    public void editTask(int index, Name newName) {
+        tasks.edit(index, newName);
+    }
+
+    public void editTaskDate(int index, List<Date> dates) throws TaskNotFoundException {
+        tasks.editDate(index, dates);
+    }
+    
+    public String editTaskRemindDate(int index, Date date) throws TaskNotFoundException {
+        return tasks.editRemindDate(index, date);
+    }
+    
+    public List<Task> verifyReminder(Date currentDateTime) {
+        return tasks.verifyRemindDate(currentDateTime);
+    }
+    
+    public void dismissReminder(Date currentDateTime) {
+        tasks.dismissReminder(currentDateTime);
+    }
+    
+```
+###### \java\taskle\ui\SystemTray.java
+``` java
+ */
+public class SystemTray {
+
+    private static final int NOTIFICATION_INTERVAL = 60 * 1000;
+
+    private static final int NOTIFICATION_DELAY = 1 * 1000;
+    
+    private final Logger logger = LogsCenter.getLogger(CommandBox.class);
+
+    private static java.awt.SystemTray tray;
+    private static java.awt.TrayIcon trayIcon;
+    private static Date currentDateTime;
+    // one icon location is shared between the application tray icon and task
+    // bar icon.
+    // you could also use multiple icons to allow for clean display of tray
+    // icons on hi-dpi devices.
+    private final BufferedImage iconApplication;
+
+    // application stage is stored so that it can be shown and hidden based on
+    // system tray icon operations.
+    private Stage stage;
+
+    private static Logic logic;
+    
+    // a timer allowing the tray icon to provide a periodic notification event.
+    private Timer notificationTimer = new Timer();
+
+
+    public SystemTray(Logic logic, javafx.scene.image.Image iconApplication, Stage stage) {
+        this.iconApplication = SwingFXUtils.fromFXImage(iconApplication, null);
+        this.stage = stage;
+        SystemTray.logic = logic;
+    }
+
+
+    /**
+     * Sets up a system tray icon for the application.
+     */
+    public void addAppToTray() {
+        // ensure awt toolkit is initialized.
+        java.awt.Toolkit.getDefaultToolkit();
+        
+        // app requires system tray support, just exit if there is no support.
+        if (!java.awt.SystemTray.isSupported()) {
+            String error = "No system tray support, application running without system tray.";
+            logger.severe(error);
+            Notifications.create()
+                .title("Error")
+                .text(error)
+                .showWarning();
+            return;
+        }
+        
+        
+        tray = setupTray();
+        trayIcon = setupTrayIcon();
+        addMenuItems(tray, trayIcon);
+        addNotificationTimer(trayIcon);
+        // add the application tray icon to the system tray.
+        try {
+            tray.add(trayIcon);
+        } catch (AWTException e) {
+            e.printStackTrace();
+            logger.severe(e.getMessage());
+        }
+
+    }
+    
+    /**
+     *  Method to set up the tray in the task bar
+     * @return
+     */
+    private java.awt.SystemTray setupTray() {
+
+        // set up a system tray.
+        java.awt.SystemTray tray = java.awt.SystemTray.getSystemTray();
+        return tray;
+    }
+    
+    /**
+     *  Method to add the tray icon into the task bar
+     * @return
+     */
+    private java.awt.TrayIcon setupTrayIcon() {
+        java.awt.TrayIcon trayIcon = new java.awt.TrayIcon(iconApplication);
+        trayIcon.setImageAutoSize(true);
+        // if the user double-clicks on the tray icon, show the main app stage.
+        trayIcon.addActionListener(event -> Platform.runLater(this::showStage));
+        return trayIcon;
+    }
+
+    /**
+     *  Method to add menu items into the tray icon and implement the
+     *  required listeners for them.
+     */
+    private void addMenuItems(java.awt.SystemTray tray, java.awt.TrayIcon trayIcon) {
+        // if the user selects the default menu item (which includes the app
+        // name),
+        // show the main app stage.
+        java.awt.MenuItem openItem = new java.awt.MenuItem("Open Taskle");
+        openItem.addActionListener(event -> Platform.runLater(this::showStage));
+
+        // the convention for tray icons seems to be to set the default icon for
+        // opening
+        // the application stage in a bold font.
+        java.awt.Font defaultFont = java.awt.Font.decode(null);
+        java.awt.Font boldFont = defaultFont.deriveFont(java.awt.Font.BOLD);
+        openItem.setFont(boldFont);
+
+        java.awt.MenuItem dismissReminderItem = new java.awt.MenuItem("Dismiss Reminders");
+        dismissReminderItem.addActionListener(event -> Platform.runLater(this::dismissReminders));
+                
+        // to really exit the application, the user must go to the system tray
+        // icon
+        // and select the exit option, this will shutdown JavaFX and remove the
+        // tray icon (removing the tray icon will also shut down AWT).
+        java.awt.MenuItem exitItem = new java.awt.MenuItem("Exit");
+        exitItem.addActionListener(event -> {
+            notificationTimer.cancel();
+            Platform.exit();
+            tray.remove(trayIcon);
+        });
+
+        // setup the popup menu for the application.
+        final java.awt.PopupMenu popup = new java.awt.PopupMenu();
+        popup.add(openItem);
+        popup.add(dismissReminderItem);
+        popup.addSeparator();
+        popup.add(exitItem);
+        trayIcon.setPopupMenu(popup);
+    }
+    
+    /**
+     *  Method to add a timer to notify the user of the reminders
+     */
+    private void addNotificationTimer(java.awt.TrayIcon trayIcon) {
+        // create a timer which periodically displays a notification message.
+        notificationTimer.schedule(new TimerTask() {
+            @Override
+            public void run() {
+                currentDateTime = new Date();
+                List<Task> taskRemindDisplay = logic.verifyReminder(currentDateTime);
+                if(taskRemindDisplay.isEmpty()) {
+                    return;
+                }
+                StringBuilder sb = new StringBuilder();
+                for (int i = 0; i < taskRemindDisplay.size(); i++) {
+                    Task task = taskRemindDisplay.get(i);
+                    sb.append(task.getName().fullName);
+                    if(!task.getDetailsString().equals("")) {
+                        sb.append(" Date: " + task.getDetailsString());
+                    }
+                    sb.append("\n");
+                }
+                javax.swing.SwingUtilities.invokeLater(() -> trayIcon.displayMessage("Reminder!",
+                        sb.toString(), java.awt.TrayIcon.MessageType.INFO));
+                
+            }
+        }, NOTIFICATION_DELAY, NOTIFICATION_INTERVAL);
+
+    }
+    
+    public static void showNotification() {
+        currentDateTime = new Date();
+        List<Task> taskRemindDisplay = logic.verifyReminder(currentDateTime);
+        if(taskRemindDisplay.isEmpty()) {
+            return;
+        }
+        StringBuilder sb = new StringBuilder();
+        for (int i = 0; i < taskRemindDisplay.size(); i++) {
+            Task task = taskRemindDisplay.get(i);
+            sb.append(task.getName().fullName);
+            if(!task.getDetailsString().equals("")) {
+                sb.append(" Date: " + task.getDetailsString());
+            }
+            sb.append("\n");
+        }
+        javax.swing.SwingUtilities.invokeLater(() -> trayIcon.displayMessage("Reminder!",
+                sb.toString(), java.awt.TrayIcon.MessageType.INFO));
+    }
+    
+    private void dismissReminders() {
+        logic.dismissReminder(currentDateTime);
+    }
+    /**
+     * Shows the application stage and ensures that it is brought ot the front
+     * of all stages.
+     */
+    private void showStage() {
+        if (stage != null) {
+            stage.show();
+            stage.toFront();
+        }
+    }
 }
 ```
