--- a/collated/main/A0141780J.md
+++ b/collated/main/A0141780J.md
@@ -2,24 +2,16 @@
 ###### \java\taskle\logic\commands\AddCommand.java
 ``` java
 
-/**
- * Adds a task to the Task Manager.
- */
-public class AddCommand extends Command {
-    /** 
-     * stub unique tag list used for every add commands for now
-     */
-    UniqueTagList stubTagList = new UniqueTagList();
-
     public static final String COMMAND_WORD = "add";
+    public static final String COMMAND_WORD_SHORT = "a";
 
-    public static final String MESSAGE_USAGE = COMMAND_WORD + ": Adds a task to the Task Manager.\n"
-            + "Format: add task_name [by date & time] [remind date time]\n"
-            + "or\n add task_name [from date & time] [to date & time] [remind date time]\n"
-            + "Example: " + "add Business Trip from 4 Oct to 5 Oct remind 3 Oct 2pm";
+    public static final String MESSAGE_USAGE = COMMAND_WORD + ": Adds a task into Taskle.\n"
+            + "\nFormat: add task_name by [date + time] [remind date + time]\n"
+            + "or\nadd task_name from [date + time] to [date + time] [remind date + time]\n"
+            + "\nExample: " + "add Business Trip from 4 Oct to 5 Oct remind 3 Oct 2pm";
 
-    public static final String MESSAGE_SUCCESS = "New task added: %1$s";
-    public static final String MESSAGE_DUPLICATE_TASK = "This task already exists in the Task Manager";
+    public static final String MESSAGE_SUCCESS = "Added New Task: %1$s";
+    public static final String MESSAGE_DUPLICATE_TASK = "This task already exists in Taskle!";
 
     private final Task toAdd;
 
@@ -30,47 +22,47 @@ public class AddCommand extends Command {
      */
     public AddCommand(String name)
             throws IllegalValueException {
-        this.toAdd = new FloatTask(new Name(name), stubTagList);
+        assert (name != null);
+        this.toAdd = new FloatTask(new Name(name));
     }
     
     /**
-     * Convenience constructor using raw name 
-     * and DateTime object for deadline date. 
+     * Convenience constructor using raw name value.
      *
      * @throws IllegalValueException if any of the raw values are invalid
      */
-    public AddCommand(String name, Date deadlineDate)
-            throws IllegalValueException {
-        assert deadlineDate != null;
-        this.toAdd = new DeadlineTask(new Name(name), deadlineDate, stubTagList);
+    public AddCommand(String nameString, Date startDate, Date endDate, Date remindDate)
+                      throws IllegalValueException {
+        assert (nameString != null);
+        
+        Name name = new Name(nameString);
+        if (startDate != null && endDate != null) {
+            toAdd = new EventTask(name, startDate, endDate);
+        } else if (endDate != null) {
+            toAdd = new DeadlineTask(name, endDate);
+        } else {
+            toAdd = new FloatTask(name);
+        }
+        
+        if (remindDate != null) {
+            toAdd.setRemindDate(remindDate);
+        }
     }
     
-    /**
-     * Convenience constructor using raw name 
-     * and DateTime objects for start and end dates.
-     * 
-     * @throws IllegalValueException if any of the raw values are invalid
-     */
-    public AddCommand(String name, Date startDate, Date endDate)
-            throws IllegalValueException {
-        assert startDate != null;
-        assert endDate != null;
-        this.toAdd = new EventTask(new Name(name), startDate, endDate, stubTagList);
-    }
-
-
     @Override
     public CommandResult execute() {
-        assert model != null;
-        
+        assert model != null;        
         model.storeTaskManager();
         model.addTask(toAdd);
-        return new CommandResult(String.format(MESSAGE_SUCCESS, toAdd), true);
-    }
-
-    @Override
-    public String getCommandWord() {
-        return COMMAND_WORD;
+        
+        // Display reminder message only when reminder is set
+        if (toAdd.getRemindDate() == null) {
+            return new CommandResult(String.format(MESSAGE_SUCCESS, toAdd), true);
+        } else {
+            return new CommandResult(
+                    String.format(MESSAGE_SUCCESS, toAdd 
+                    + " Reminder on: " + toAdd.getRemindDetailsString()), true);
+        }
     }
 
 }
@@ -85,11 +77,11 @@ public class AddCommand extends Command {
 public class FindCommand extends Command {
     
     public static final String COMMAND_WORD = "find";
+    public static final String COMMAND_WORD_SHORT ="f";
 
-    public static final String MESSAGE_USAGE = COMMAND_WORD + ": Finds all tasks with names consisting of "
-            + "the specified keywords (case-sensitive)\nand displays them as a list with index numbers.\n"
-            + "Format: " + COMMAND_WORD + " search_query\n"
-            + "Example: " + COMMAND_WORD + " meeting";
+    public static final String MESSAGE_USAGE = COMMAND_WORD + ": Finds all tasks in Taskle that both contain the keywords and fulfill the specific status."
+            + "\n\nFormat: " + COMMAND_WORD + " keywords [-status]\n"
+            + "\nExample: " + COMMAND_WORD + " books";
 
     private final Set<String> keywords;
     
@@ -119,11 +111,6 @@ public class FindCommand extends Command {
                 true);
     }
     
-    @Override
-    public String getCommandWord() {
-        return COMMAND_WORD;
-    }
-
 }
 ```
 ###### \java\taskle\logic\commands\ListCommand.java
@@ -131,16 +118,17 @@ public class FindCommand extends Command {
 public class ListCommand extends Command {
 
     public static final String COMMAND_WORD = "list";
+    public static final String COMMAND_WORD_SHORT = "l";
 
     public static final String MESSAGE_LIST_SUCCESS = 
             "Listed %1$s tasks";
     
     public static final String MESSAGE_USAGE = COMMAND_WORD 
             + ": Lists all tasks with the specified statuses\n"
-            + "Format: " + COMMAND_WORD + " [-status]\n"
+            + "\nFormat: " + COMMAND_WORD + " [-status]\n"
             + "Note: You can have more than 1 statuses or none at all\n"
-            + "If not status is specified, pending and overdue items will be listed"
-            + "Example: " + COMMAND_WORD + " -done -pending";
+            + "If no status is specified, pending and overdue items will be listed\n"
+            + "\nExample: " + COMMAND_WORD + " -done -pending";
     
     // Fields for whether to show the corresponding statuses
     private final boolean showPending;
@@ -178,11 +166,7 @@ public class ListCommand extends Command {
         return new CommandResult(String.format(MESSAGE_LIST_SUCCESS, message), 
                                  true);
     }
-    
-    @Override
-    public String getCommandWord() {
-        return COMMAND_WORD;
-    }
+
 }
 ```
 ###### \java\taskle\model\help\CommandGuide.java
@@ -340,219 +324,139 @@ public class CommandGuide {
         return basePred;
     }
 ```
-###### \java\taskle\model\task\DeadlineTask.java
+###### \java\taskle\ui\CommandBox.java
 ``` java
-
-/**
- * Deadline task object that guarantees non-null fields for task and nullable
- * field for deadlineDate.
- * 
- * @author Abel
- *
- */
-public class DeadlineTask extends Task {
-
-    private Date deadlineDate;
-
-    public DeadlineTask(Name name, Date deadlineDate, UniqueTagList tags) {
-        super(name, tags);
-        this.deadlineDate = deadlineDate;
+    public void configure(NotificationPane notificationPane, 
+                          Logic logic) {
+        this.notificationPane = notificationPane;
+        this.logic = logic;
+        createPopOver();
+        registerAsAnEventHandler(this);
     }
 
-    public DeadlineTask(ReadOnlyTask source) {
-        super(source);
-        
-        if (source instanceof DeadlineTask) {
-            deadlineDate = ((DeadlineTask) source).getDeadlineDate();
-        }
-    }
-
-    @Override
-    public String getDetailsString() {
-        return DateFormatUtil.formatDate(deadlineDate);
-    }
-
-    public Date getDeadlineDate() {
-        return deadlineDate;
-    }
-
-    public void setDeadlineDate(Date deadlineDate) {
-        this.deadlineDate = deadlineDate;
-    }
-        
-    @Override
-    public Task copy() {
-        return new DeadlineTask(this);
-    }
-
-    /**
-     * Converts the task into a string that can represent its addition in a
-     * command as well.
-     */
-    @Override
-    public String toString() {
-        StringBuilder builder = new StringBuilder();
-        builder.append(name);
-        builder.append(" by ");
-        builder.append(DateFormatUtil.getDateArgString(deadlineDate));
-        return builder.toString();
-    }
-
-    @Override
-    public Status getStatus() {
-        Calendar calendar = Calendar.getInstance();
-        Date nowDate = calendar.getTime();
-        if (isTaskDone) { 
-            return Status.DONE;
-        } else if (nowDate.before(deadlineDate)) {
-            return Status.PENDING;
-        } else {
-            return Status.OVERDUE;
-        }
-    }
-
-}
-```
-###### \java\taskle\model\task\EventTask.java
-``` java
-
-/**
- * Event task object that guarantees non-null fields for task
- * and nullable fields for event start and end dates.
- * @author Abel
- *
- */
-public class EventTask extends Task {
-        
-    private Date startDate;
-    private Date endDate;
-
-    public EventTask(Name name, Date startDateTime, Date endDateTime, UniqueTagList tags) {
-        super(name, tags);
-        this.startDate = startDateTime;
-        this.endDate = endDateTime;
-    }
-
-    public EventTask(ReadOnlyTask source) {
-        super(source);
-        
-        if (source instanceof EventTask) {
-            EventTask event = (EventTask) source;
-            startDate = event.getStartDate();
-            endDate = event.getEndDate();
-        }
-    }
-
-    @Override
-    public String getDetailsString() {
-        return DateFormatUtil.formatEventDates(startDate, endDate);
-    }
-    
-    public Date getEndDate() {
-        return endDate;
-    }
-    
-    public Date getStartDate() {
-        return startDate;
-    }
-   
-    public void setEndDate(Date endDate) {
-        this.endDate = endDate;
-    }
-    
-    public void setStartDate(Date startDate) {
-        this.startDate = startDate;
-    }
-   
-    @Override
-    public Task copy() {
-        return new EventTask(this);
+    private void addToPlaceholder() {
+        SplitPane.setResizableWithParent(placeHolderPane, false);
+        placeHolderPane.getChildren().add(commandTextField);
+        FxViewUtil.applyAnchorBoundaryParameters(commandPane, 0.0, 0.0, 0.0, 0.0);
+        FxViewUtil.applyAnchorBoundaryParameters(commandTextField, 0.0, 0.0, 0.0, 0.0);
     }
     
     /**
-     * Converts the task into a string that can represent
-     * its addition in a command as well.
+     * Creates a pop over with content layout and style specified.
      */
-    @Override
-    public String toString() {
-        StringBuilder builder = new StringBuilder();
-        builder.append(name);
-        builder.append(" from ");
-        builder.append(DateFormatUtil.getDateArgString(
-                startDate, endDate));
-        return builder.toString();
-    }
-
-    @Override
-    public Status getStatus() {
-        if (isTaskDone) {
-            return Status.DONE;
-        }
-        
-        Calendar calendar = Calendar.getInstance();
-        Date nowDate = calendar.getTime();
-        if (nowDate.before(startDate)) {
-            return Status.PENDING;
-        } else {
-            return Status.OVERDUE;
-        }
-    }
-
-}
-```
-###### \java\taskle\model\task\FloatTask.java
-``` java
-
-/**
- * A Task with no other details like time and dates.
- * It only guarantees a task name.
- * @author Abel
- *
- */
-public class FloatTask extends Task {
-
-    public FloatTask(Name name, UniqueTagList tags) {
-        super(name, tags);
+    private void createPopOver() {
+        popOver = new PopOver();
+        popOver.setId(POP_OVER_ID);
+        setPopOverLayout();
+        setPopOverStyle();
     }
     
     /**
-     * Copy constructor.
+     * Sets up the layout inside popover.
      */
-    public FloatTask(ReadOnlyTask source) {
-        super(source);
+    private void setPopOverLayout() {
+        popOverText = new Text();
+        popOverText.setId(POP_OVER_TEXT_ID);
+        
+        VBox vBox = new VBox();
+        vBox.getChildren().add(popOverText);
+        vBox.setPadding(new Insets(10));
+        popOver.setContentNode(vBox);
     }
     
-    @Override
-    public String getDetailsString() {
-        return "";
+    /**
+     * Sets up the style for popover and how it is displayed.
+     */
+    private void setPopOverStyle() {
+        popOver.setArrowLocation(ArrowLocation.BOTTOM_CENTER);
+        popOver.setFadeInDuration(new Duration(300));
+        popOver.setDetachable(false);
+        popOver.setAutoHide(true);
     }
 
     @Override
-    public Task copy() {
-        return new FloatTask(this);
+    public void setNode(Node node) {
+        commandPane = (AnchorPane) node;
     }
 
     @Override
-    public Status getStatus() {
-        if (isTaskDone) {
-            return Status.DONE;
+    public String getFxmlPath() {
+        return FXML;
+    }
+
+    @Override
+    public void setPlaceholder(AnchorPane pane) {
+        this.placeHolderPane = pane;
+    }
+
+    /**
+     * Java FXML method that is called everytime there's a 
+     * new command input.
+     */
+    @FXML
+    private void handleCommandInputChanged() {
+        //Take a copy of the command text
+        previousCommandText = commandTextField.getText();
+        
+        // execute command and display command feedback
+        mostRecentResult = logic.execute(previousCommandText);
+        displayCommandFeedback(mostRecentResult);
+        logger.info("Result: " + mostRecentResult.getFeedback());
+    }
+    
+    /**
+     * Displays command feedback based on results.
+     * If result is not successful, no feedback is displayed.
+     * If successful, feedback is displayed.
+     * @param commandResult
+     */
+    private void displayCommandFeedback(CommandResult commandResult) {
+        assert commandResult != null;
+        
+        String feedback = commandResult.getFeedback();
+        if (!commandResult.isSuccessful()) {
+            return;
         }
         
-        return Status.FLOAT;
+        showCorrectCommand(feedback);
+    }
+
+    @Subscribe
+    private void handleIncorrectCommandAttempted(IncorrectCommandAttemptedEvent event){
+        logger.info(LogsCenter.getEventHandlingLogMessage(event,"Invalid command: " + previousCommandText));
+        showIncorrectCommand(event.getFeedback());
+        restoreCommandText();
+    }
+
+    /**
+     * Shows the UI elements for incorrect command.
+     * @param feedback feedback message to user to incorrect command.
+     */
+    private void showIncorrectCommand(String feedback) {
+        popOverText.setText(feedback);
+        popOver.show(commandTextField);
+        notificationPane.hide();
     }
     
+    /**
+     * Shows the UI elements for correct command.
+     * @param feedback feedback message to user for correct command.
+     */
+    private void showCorrectCommand(String feedback) {
+        popOver.hide();
+        commandTextField.clear();
+        notificationPane.show(feedback);
+    }
+    
+    /**
+     * Restores the command box text to the previously entered command
+     */
+    private void restoreCommandText() {
+        commandTextField.setText(previousCommandText);
+        commandTextField.positionCaret(previousCommandText.length());
+    }
+
 }
-```
-###### \java\taskle\model\task\Task.java
-``` java
-
-/**
- * Abstraction for all Task in the task manager.
- * Guarantees: details are present and not null, field values are validated.
- */
-public abstract class Task implements ReadOnlyTask {
-
-    protected Name name;
 ```
 ###### \resources\view\DarkTheme.css
 ``` css
@@ -655,12 +559,17 @@ public abstract class Task implements ReadOnlyTask {
 
 .cell_big_label {
     -fx-font-size: 20px;
-    -fx-text-fill: #010504;
+    -fx-text-fill: white;
+}
+
+.header_label {
+    -fx-font-size: 20px;
+    -fx-text-fill: white;
 }
 
 .cell_small_label {
     -fx-font-size: 11px;
-    -fx-text-fill: #010504;
+    -fx-text-fill: white;
 }
 
 .anchor-pane {
@@ -702,6 +611,11 @@ public abstract class Task implements ReadOnlyTask {
     -fx-background-color: #37474F;
     -fx-border-color: #37474F;
     -fx-border-width: 1px;
+}
+
+.header-grid-pane {
+    -fx-background-color: #37474F;
+    -fx-border-color: #37474F;
 }
 
 .grid-pane .anchor-pane {
@@ -855,7 +769,7 @@ public abstract class Task implements ReadOnlyTask {
 		<URL value="@Extensions.css" />
 	</stylesheets>
 	<children>
-		<TableView fx:id="helpTable" minHeight="500" minWidth="800"
+		<TableView fx:id="helpTable" minHeight="600" minWidth="880"
 			AnchorPane.topAnchor="0.0" AnchorPane.bottomAnchor="0.0"
 			AnchorPane.rightAnchor="0.0" AnchorPane.leftAnchor="0.0">
 		</TableView>
@@ -885,8 +799,10 @@ public abstract class Task implements ReadOnlyTask {
 			<menus>
 				<Menu mnemonicParsing="false" text="File">
 					<items>
-						<MenuItem mnemonicParsing="false" onAction="#handleSettings"
-							text="Settings" />
+						<MenuItem mnemonicParsing="false" onAction="#handleChangeStorageFile"
+							text="Open File" />
+						<MenuItem mnemonicParsing="false" onAction="#handleChangeDirectory"
+							text="Change Directory" />
 						<MenuItem mnemonicParsing="false" onAction="#handleExit"
 							text="Exit" />
 					</items>
@@ -919,64 +835,91 @@ public abstract class Task implements ReadOnlyTask {
 ```
 ###### \resources\view\TaskListCard.fxml
 ``` fxml
+
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.shape.Rectangle?>
 
-<HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/8.0.60"
-	xmlns:fx="http://javafx.com/fxml/1">
+<HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1">
 	<children>
+
 		<GridPane HBox.hgrow="ALWAYS">
 			<columnConstraints>
-				<ColumnConstraints hgrow="NEVER" maxWidth="80.0"
-					minWidth="30.0" prefWidth="80.0" />
-				<ColumnConstraints hgrow="NEVER" minWidth="10.0"
-					prefWidth="450.0" />
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="96.0"
-					minWidth="10.0" prefWidth="57.0" />
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="187.0"
-					minWidth="10.0" prefWidth="143.0" />
+            <ColumnConstraints hgrow="NEVER" maxWidth="80.0" minWidth="12.0" prefWidth="16.0" />
+				<ColumnConstraints hgrow="NEVER" maxWidth="148.0" minWidth="30.0" prefWidth="70.0" />
+				<ColumnConstraints hgrow="NEVER" maxWidth="450.0" minWidth="441.0" prefWidth="441.0" />
+				<ColumnConstraints hgrow="NEVER" maxWidth="377.0" minWidth="10.0" prefWidth="362.0" />
+            <ColumnConstraints maxWidth="495.0" minWidth="432.0" prefWidth="447.0" />
 			</columnConstraints>
 			<rowConstraints>
-				<RowConstraints minHeight="10.0" prefHeight="30.0"
-					vgrow="SOMETIMES" />
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
 			</rowConstraints>
 			<children>
-				<Label fx:id="id" styleClass="cell_big_label" text="\$id" />
-				<Label fx:id="name" minWidth="-Infinity" prefWidth="450.0"
-					styleClass="cell_big_label" text="\$name" GridPane.columnIndex="1" />
-				<Label fx:id="tags" styleClass="cell_small_label" text="\$tags"
-					GridPane.columnIndex="2" />
-				<Label fx:id="details" minWidth="-Infinity" prefWidth="300.0"
-					styleClass="cell_big_label" text="\$details" textAlignment="RIGHT"
-					GridPane.columnIndex="3" GridPane.halignment="RIGHT" />
+				<Label fx:id="id" styleClass="cell_big_label" text="\$id" GridPane.columnIndex="1">
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin></Label>
+				<Label fx:id="name" minWidth="-Infinity" prefWidth="450.0" styleClass="cell_big_label" text="\$name" GridPane.columnIndex="2" />
+				<Label fx:id="reminderDate" minWidth="-Infinity" prefHeight="21.0" prefWidth="359.0" styleClass="cell_big_label" text="\$reminderDate" textAlignment="RIGHT" GridPane.columnIndex="3" GridPane.halignment="RIGHT" />
+					
+				<Label fx:id="details" minWidth="-Infinity" prefHeight="21.0" prefWidth="445.0" styleClass="cell_big_label" text="\$details" GridPane.columnIndex="4" GridPane.halignment="RIGHT" />
+            <Rectangle fx:id="colorTag" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="50.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="15.0" GridPane.vgrow="ALWAYS" />
 			</children>
 		</GridPane>
 	</children>
 	<padding>
-		<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+		<Insets bottom="10.0" right="10.0" top="10.0" />
 	</padding>
 </HBox>
 ```
 ###### \resources\view\TaskListPanel.fxml
 ``` fxml
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.layout.*?>
+
 <?import java.net.URL?>
-<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="taskle.ui.TaskListPanel" AnchorPane.bottomAnchor="0.0"
-	AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-	AnchorPane.topAnchor="0.0">
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+
+<VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="taskle.ui.TaskListPanel">
 	<stylesheets>
 		<URL value="@DarkTheme.css" />
 		<URL value="@Extensions.css" />
 	</stylesheets>
 	<children>
-		<ListView fx:id="taskListView" VBox.vgrow="ALWAYS"
-			styleClass="anchor-pane" />
+		<GridPane styleClass="header-grid-pane" HBox.hgrow="ALWAYS">
+			<columnConstraints>
+            <ColumnConstraints hgrow="NEVER" maxWidth="16.0" minWidth="16.0" prefWidth="16.0" />
+				<ColumnConstraints hgrow="NEVER" maxWidth="72.0" minWidth="72.0" prefWidth="72.0" />
+				<ColumnConstraints hgrow="NEVER" maxWidth="450.0" minWidth="450.0" prefWidth="450.0" />
+				<ColumnConstraints hgrow="NEVER" maxWidth="360.0" minWidth="360.0" prefWidth="360.0" />
+            <ColumnConstraints maxWidth="359.0" minWidth="359.0" prefWidth="359.0" />
+			</columnConstraints>
+			<rowConstraints>
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+			</rowConstraints>
+			<children>
+				<Label styleClass="header_label" text="ID" GridPane.columnIndex="1" GridPane.halignment="LEFT">
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin></Label>
+				<Label maxWidth="400.0" minWidth="368.0" prefHeight="23.0" prefWidth="403.0" styleClass="header_label" text="Name" GridPane.columnIndex="2" />
+				<Label minWidth="-Infinity" prefHeight="21.0" prefWidth="356.0" styleClass="header_label" text="Reminder" GridPane.columnIndex="3" GridPane.halignment="LEFT" />
+					
+				<Label minWidth="-Infinity" prefWidth="500.0" styleClass="header_label" text="Dates" GridPane.columnIndex="4" GridPane.halignment="LEFT" />
+			</children>
+		</GridPane>
+		
+		<ListView fx:id="taskListView" styleClass="anchor-pane" VBox.vgrow="ALWAYS" />
 	</children>
 </VBox>
 ```
