--- a/collated/test/A0139402M.md
+++ b/collated/test/A0139402M.md
@@ -1,9 +1,59 @@
 # A0139402M
+###### \java\guitests\AddCommandTest.java
+``` java
+    @Test
+    public void add_floatTaskWithReminders_success() {
+        Task[] currentList = td.getTypicalTasks();
+        String remindDate = "15 Oct 7pm";
+        Date date = DateParser.parse(remindDate).get(0);
+        Task taskToAdd = td.helpFriend;
+        taskToAdd.setRemindDate(date);
+        assertAddSuccess(taskToAdd, currentList);
+        
+        commandBox.runCommand(AddCommand.COMMAND_WORD + " Buy Groceries for home " 
+                + "remind 15 Oct 7pm");
+        assertSuccessfulMessage(
+                String.format(AddCommand.MESSAGE_SUCCESS,  
+                "Buy Groceries for home Reminder on: 7:00PM, 15 Oct 2016"));
+    }
+    
+    @Test
+    public void add_deadlineTaskWithReminders_success() {
+        commandBox.runCommand("clear");
+        Task[] currentList = new Task[0];
+        String remindDate = "15 Oct 7pm";
+        Date date = DateParser.parse(remindDate).get(0);
+        Task taskToAdd = td.assignmentDeadline;
+        taskToAdd.setRemindDate(date);
+        assertAddSuccess(taskToAdd, currentList);
+        
+        commandBox.runCommand(AddCommand.COMMAND_WORD + " Buy Groceries for home by 4pm 26 Oct "
+                + "remind 26 Oct 3pm");
+        assertSuccessfulMessage(
+                String.format(AddCommand.MESSAGE_SUCCESS,  
+                "Buy Groceries for home by 4:00PM, 26 Oct 2016 Reminder on: 3:00PM, 26 Oct 2016"));
+    }
+    
+    @Test
+    public void add_eventTaskWithReminders_success() {
+        commandBox.runCommand("clear");
+        Task[] currentList = new Task[0];
+        String remindDate = "15 Oct 7pm";
+        Date date = DateParser.parse(remindDate).get(0);
+        Task taskToAdd = td.charityEvent;
+        taskToAdd.setRemindDate(date);
+        assertAddSuccess(taskToAdd, currentList);
+        
+        commandBox.runCommand(AddCommand.COMMAND_WORD + " Tuition from 26 Oct 9am to 11am " 
+                + "remind 26 Oct 8am");
+        assertSuccessfulMessage(
+                String.format(AddCommand.MESSAGE_SUCCESS,  
+                "Tuition from 9:00AM to 11:00AM, 26 Oct 2016 Reminder on: 8:00AM, 26 Oct 2016"));
+    }
+```
 ###### \java\guitests\EditCommandTest.java
 ``` java
-
 public class EditCommandTest extends TaskManagerGuiTest {
-
     /**
      * Edits a current task inside the TypicalTestTask to test the edit
      * function. Check if that task has been edited correctly.
@@ -20,7 +70,7 @@ public class EditCommandTest extends TaskManagerGuiTest {
         assertEditResultSuccess(command, oldName + " -> " + newTaskName);
 
         TaskCardHandle addedCard = taskListPanel.getTaskCardHandle(Integer.parseInt(index) - 1);
-        FloatTask newTask = new FloatTask(newName, new UniqueTagList());
+        FloatTask newTask = new FloatTask(newName);
         assertMatching(newTask, addedCard);
     }
     
@@ -54,24 +104,24 @@ public class EditCommandTest extends TaskManagerGuiTest {
         assertEditInvalidCommand(command);
     }
 
-//    /**
-//     * Edits a task such that the new name is a duplicate of another task
-//     * 
-//     * @throws IllegalValueException
-//     */
-//    @Test
-//    public void edit_duplicate_task() throws IllegalValueException {
-//        String newName = "Go Concert";
-//        String command =
-//                buildCommand("1", newName);
-//        assertEditResultSuccess(command, "Charity Event" + " -> " + newName);
-//
-//        TaskCardHandle addedCard = taskListPanel.getTaskCardHandle(0);
-//        EventTask newTask = (EventTask) td.charityEvent.copy();
-//        newTask.setName(new Name(newName));
-//        assertMatching(newTask, addedCard);
-//    }
-//
+    /**
+     * Edits a task such that the new name is a duplicate of another task
+     * 
+     * @throws IllegalValueException
+     */
+    @Test
+    public void edit_duplicate_task() throws IllegalValueException {
+        String newName = "Go Concert";
+        String command =
+                buildCommand("1", newName);
+        assertEditResultSuccess(command, "Charity Event" + " -> " + newName);
+
+        TaskCardHandle addedCard = taskListPanel.getTaskCardHandle(0);
+        EventTask newTask = (EventTask) td.charityEvent.copy();
+        newTask.setName(new Name(newName));
+        assertMatching(newTask, addedCard);
+    }
+
     private String buildCommand(String taskNumber, String newName) {
         String command = EditCommand.COMMAND_WORD + " " + taskNumber + " " + newName;
         return command;
@@ -80,7 +130,7 @@ public class EditCommandTest extends TaskManagerGuiTest {
     
     private void assertEditResultSuccess(String command, String newName) {
         commandBox.runCommand(command);
-        assertSuccessfulMessage("Edited Task: " + newName);
+        assertSuccessfulMessage("Renamed Task: " + newName);
     }
 
     private void assertEditInvalidIndex(String command) {
@@ -99,9 +149,110 @@ public class EditCommandTest extends TaskManagerGuiTest {
     }
 }
 ```
+###### \java\guitests\RemindCommandTest.java
+``` java
+public class RemindCommandTest extends TaskManagerGuiTest {
+
+    /**
+     * Set a reminder for a current task inside the TypicalTestTask to
+     * test the remind function. Check if that task has been edited
+     * correctly.
+     * 
+     * @throws IllegalValueException
+     */
+    @Test
+    public void remind_task_success() throws IllegalValueException {
+        String index = "3";
+        TaskCardHandle oldTask = taskListPanel.getTaskCardHandle(Integer.parseInt(index) - 1);
+        String name = oldTask.getFullName();
+        String newRemindDateString = "13 Dec 7pm";
+        Date date = DateParser.parse(newRemindDateString).get(0);
+        String formattedNewDate = DateFormatUtil.formatDate(date);
+        String oldRemindDate = oldTask.getRemindDetails();
+        assertRemindResultSuccess("remind " + index + " " + newRemindDateString, 
+                name + " " + oldRemindDate + " -> " + formattedNewDate);
+        TaskCardHandle addedCard = taskListPanel.getTaskCardHandle(Integer.parseInt(index) - 1);
+        FloatTask newTask = new FloatTask(new Name(name), date);
+        assertMatching(newTask, addedCard);
+    }
+
+    /**
+     * Set a reminder with no specified time to a task
+     * @throws IllegalValueException
+     */
+    @Test
+    public void remind_taskNoInputTime_success() throws IllegalValueException {
+        String index = "3";
+        TaskCardHandle oldTask = taskListPanel.getTaskCardHandle(Integer.parseInt(index) - 1);
+        String name = oldTask.getFullName();
+        String newRemindDateString = "13 Dec";
+        Date date = DateParser.parse(newRemindDateString).get(0);
+        String formattedNewDate = DateFormatUtil.formatRemindDate(date);
+        String oldRemindDate = oldTask.getRemindDetails();
+        assertRemindResultSuccess("remind " + index + " " + newRemindDateString, 
+                name + " " + oldRemindDate + " -> " + formattedNewDate);
+        TaskCardHandle addedCard = taskListPanel.getTaskCardHandle(Integer.parseInt(index) - 1);
+        FloatTask newTask = new FloatTask(new Name(name), date);
+        assertMatching(newTask, addedCard);
+    }
+    
+    /**
+     * Set reminder to an inexistent task
+     */
+    @Test
+    public void remind_inexistentTask_failure() {
+        String commandInvalidIntegerIndex = buildCommand("10", "31 Oct 10pm");
+        assertRescheduleInvalidIndex(commandInvalidIntegerIndex);
+
+        String commandInvalidStringIndex = buildCommand("ABC", "31 Oct 10pm");
+        assertRescheduleInvalidCommandFormat(commandInvalidStringIndex);
+
+        String commandInvalidNegativeIntegerIndex = buildCommand("-1", "31 Oct 10pm");
+        assertRescheduleInvalidCommandFormat(commandInvalidNegativeIntegerIndex);
+    }
+
+    /**
+     * Set a reminder with more than 1 date
+     */
+    @Test
+    public void remind_moreThan1Date_failure() {
+        String commandTooManyDates = buildCommand("1", "31 Oct 10pm to 1 Nov 11pm");
+        assertRescheduleInvalidCommandFormat(commandTooManyDates);
+    }
+
+    /**
+     * Set a reminder with an invalid date
+     */
+    @Test
+    public void remind_taskInvalidDate_failure() {
+        String commandNoDates = buildCommand("1", "no date");
+        assertRescheduleInvalidCommandFormat(commandNoDates);
+    }
+    
+    private String buildCommand(String taskNumber, String date) {
+        String command = RemindCommand.COMMAND_WORD + " " + taskNumber + " " + date;
+        return command;
+    }
+
+    private void assertRemindResultSuccess(String command, String newName) {
+        commandBox.runCommand(command);
+        assertSuccessfulMessage("Set Reminder Date: " + newName);
+    }
+
+    private void assertRescheduleInvalidIndex(String command) {
+        commandBox.runCommand(command);
+        assertUnsuccessfulMessage(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
+    }
+
+    private void assertRescheduleInvalidCommandFormat(String command) {
+        commandBox.runCommand(command);
+        assertUnsuccessfulMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, RemindCommand.MESSAGE_USAGE));
+    }
+
+}
+```
 ###### \java\guitests\RescheduleCommandTest.java
 ``` java
-
 public class RescheduleCommandTest extends TaskManagerGuiTest {
 
     /**
@@ -116,7 +267,7 @@ public class RescheduleCommandTest extends TaskManagerGuiTest {
         String index = "3";
         String name = td.attendMeeting.getName().fullName;
         String oldDate = td.attendMeeting.getDetailsString();
-        assertRescheduleResultSuccess("reschedule " + index + " clear", name + "\t" + oldDate + " -> " + "");
+        assertRescheduleResultSuccess("reschedule " + index + " clear", name + " " + oldDate + " -> " + "");
     }
 
     /**
@@ -133,8 +284,7 @@ public class RescheduleCommandTest extends TaskManagerGuiTest {
         String command = buildCommand(index, newDate);
         String name = td.attendMeeting.getName().fullName;
         String oldDate = td.attendMeeting.getDetailsString();
-        assertRescheduleResultSuccess(command, name + "\t" + oldDate + " -> " + "3:00PM, 21 Oct 2016");
-
+        assertRescheduleResultSuccess(command, name + " " + oldDate + " -> " + "3:00PM, 21 Oct 2016");
     }
 
     /**
@@ -153,7 +303,7 @@ public class RescheduleCommandTest extends TaskManagerGuiTest {
         String oldDate = td.attendMeeting.getDetailsString();
 
         assertRescheduleResultSuccess(command,
-                name + "\t" + oldDate + " -> " + "3:00PM, 21 Oct 2016 to 5:00PM, 31 Oct 2016");
+                name + " " + oldDate + " -> " + "3:00PM, 21 Oct 2016 to 5:00PM, 31 Oct 2016");
 
     }
 
@@ -214,11 +364,132 @@ public class RescheduleCommandTest extends TaskManagerGuiTest {
 ###### \java\taskle\logic\LogicManagerTest.java
 ``` java
     @Test
-    public void execute_edit_invalidArgsFormat() throws Exception {
-        String expectedMessage = String.format(MESSAGE_INVALID_COMMAND_FORMAT, EditCommand.MESSAGE_USAGE);
-        assertCommandBehavior("edit ", expectedMessage);
+    public void execute_addFloatTaskWithReminder_successful() throws Exception {
+        // setup expectations
+        TestDataHelper helper = new TestDataHelper();
+        FloatTask toBeAdded = helper.homeworkWithReminder();
+        TaskManager expectedAB = new TaskManager();
+        expectedAB.addTask(toBeAdded);
+
+        // execute command and verify result
+        assertCommandBehavior(helper.generateAddCommandWithDate(toBeAdded, 
+                        helper.ADD_SUCCESSFUL_FLOAT_REMINDER),
+                String.format(AddCommand.MESSAGE_SUCCESS, toBeAdded + " Reminder on: " + toBeAdded.getRemindDetailsString()),
+                expectedAB,
+                expectedAB.getTaskList());
+
     }
     
+    @Test
+    public void execute_addEventWithDates_successful() throws Exception {
+        // setup expectations
+        TestDataHelper helper = new TestDataHelper();
+        EventTask toBeAdded = helper.finalExams();
+        TaskManager expectedAB = new TaskManager();
+        expectedAB.addTask(toBeAdded);
+
+        // execute command and verify result
+        assertCommandBehavior(
+                helper.generateAddCommandWithDate(toBeAdded, 
+                        helper.ADD_SUCCESSFUL_EVENT_DATE),
+                String.format(AddCommand.MESSAGE_SUCCESS, toBeAdded),
+                expectedAB,
+                expectedAB.getTaskList());
+    }
+    
+    @Test
+    public void execute_addEventWithDatesAndReminder_successful() throws Exception {
+        // setup expectations
+        TestDataHelper helper = new TestDataHelper();
+        EventTask toBeAdded = helper.finalExamsWithReminder();
+        TaskManager expectedAB = new TaskManager();
+        expectedAB.addTask(toBeAdded);
+
+        // execute command and verify result
+        assertCommandBehavior(
+                helper.generateAddCommandWithDate(toBeAdded, 
+                        helper.ADD_SUCCESSFUL_EVENT_REMINDER),
+                String.format(AddCommand.MESSAGE_SUCCESS, toBeAdded + " Reminder on: " + toBeAdded.getRemindDetailsString()),
+                expectedAB,
+                expectedAB.getTaskList());
+    }
+```
+###### \java\taskle\logic\LogicManagerTest.java
+``` java
+    @Test
+    public void execute_addFloatTaskWithRemindInName_successful() 
+            throws Exception {
+        // setup expectations
+        TestDataHelper helper = new TestDataHelper();
+        Task toBeAdded = helper.generateTaskWithName("remind papa");
+        TaskManager expectedAB = new TaskManager();
+        expectedAB.addTask(toBeAdded);
+
+        // execute command and verify result
+        assertCommandBehavior(
+                helper.ADD_COMMAND_REMIND_PAPA,
+                String.format(AddCommand.MESSAGE_SUCCESS, 
+                              toBeAdded),
+                expectedAB,
+                expectedAB.getTaskList());
+
+    }
+    
+    @Test
+    public void execute_addDeadlineTaskReminderMorethanOneDate_returnIncorrectCommand() 
+            throws Exception {
+        // setup expectations
+        TestDataHelper helper = new TestDataHelper();
+        DeadlineTask toBeAdded = helper.finishAssignmentWithReminder();
+        TaskManager expectedAB = new TaskManager();
+        expectedAB.addTask(toBeAdded);
+
+        // setup starting state
+        model.addTask(toBeAdded); // task already in internal task manager
+
+        // execute command and verify result
+        assertCommandBehavior(
+                helper.ADD_COMMAND_NEW_YEAR_DAY_WITH_INVALID_REMINDER,
+                String.format(MESSAGE_INVALID_COMMAND_FORMAT, 
+                              AddCommand.MESSAGE_USAGE),
+                expectedAB,
+                expectedAB.getTaskList());
+
+    }
+    
+    @Test
+    public void execute_addEventTaskReminderMorethanOneDate_returnIncorrectCommand() 
+            throws Exception {
+        // setup expectations
+        TestDataHelper helper = new TestDataHelper();
+        EventTask toBeAdded = helper.getDocsFromBobWithReminder();
+        TaskManager expectedAB = new TaskManager();
+        expectedAB.addTask(toBeAdded);
+
+        // setup starting state
+        model.addTask(toBeAdded); // task already in internal task manager
+
+        // execute command and verify result
+        assertCommandBehavior(
+                helper.ADD_COMMAND_GET_DOCS_FROM_BOB_WITH_INVALID_REMINDER,
+                String.format(MESSAGE_INVALID_COMMAND_FORMAT, 
+                              AddCommand.MESSAGE_USAGE),
+                expectedAB,
+                expectedAB.getTaskList());
+
+    }
+```
+###### \java\taskle\logic\LogicManagerTest.java
+``` java
+    @Test
+    public void execute_edit_invalidArgsFormat() throws Exception {
+        String expectedMessage = String.format(MESSAGE_INVALID_COMMAND_FORMAT, EditCommand.MESSAGE_USAGE);
+        assertCommandBehavior(EditCommand.COMMAND_WORD + " ", expectedMessage);
+    }
+    
+```
+###### \java\taskle\logic\LogicManagerTest.java
+``` java
     @Test
     public void execute_edit_successful() throws Exception {
         // setup expectations
@@ -331,7 +602,7 @@ public class RescheduleCommandTest extends TaskManagerGuiTest {
         // execute command and verify result
         assertCommandBehavior(
                 "reschedule " + index + " clear",
-                String.format(RescheduleCommand.MESSAGE_EDIT_TASK_SUCCESS, name + "\t" + oldDetails + " -> " + newDetails),
+                String.format(RescheduleCommand.MESSAGE_EDIT_TASK_SUCCESS, name + " " + oldDetails + " -> " + newDetails),
                 expectedAB,
                 expectedAB.getTaskList());
     }
@@ -361,7 +632,7 @@ public class RescheduleCommandTest extends TaskManagerGuiTest {
         // execute command and verify result
         assertCommandBehavior(
                 "reschedule " + index + " " + dateTime,
-                String.format(RescheduleCommand.MESSAGE_EDIT_TASK_SUCCESS, name + "\t" + oldDetails + " -> " + newDetails),
+                String.format(RescheduleCommand.MESSAGE_EDIT_TASK_SUCCESS, name + " " + oldDetails + " -> " + newDetails),
                 expectedAB,
                 expectedAB.getTaskList());
     }
@@ -391,9 +662,74 @@ public class RescheduleCommandTest extends TaskManagerGuiTest {
         // execute command and verify result
         assertCommandBehavior(
                 "reschedule " + index + " " + dateTime,
-                String.format(RescheduleCommand.MESSAGE_EDIT_TASK_SUCCESS, name + "\t" + oldDetails + " -> " + newDetails),
+                String.format(RescheduleCommand.MESSAGE_EDIT_TASK_SUCCESS, name + " " + oldDetails + " -> " + newDetails),
                 expectedAB,
                 expectedAB.getTaskList());
     }
+    
+    @Test
+    public void execute_remind_invalid_command() throws Exception {
+        String expectedMessage = String.format(MESSAGE_INVALID_COMMAND_FORMAT, RemindCommand.MESSAGE_USAGE);
+        assertCommandBehavior("remind task", expectedMessage);
+    }
+    
+    @Test
+    public void execute_remind_invalid_index() throws Exception {
+        String expectedMessage = String.format(MESSAGE_INVALID_COMMAND_FORMAT, RemindCommand.MESSAGE_USAGE);
+        assertCommandBehavior("remind -1", expectedMessage);
+    }
+    
+    @Test
+    public void execute_remind_invalid_date() throws Exception {
+        TestDataHelper helper = new TestDataHelper();
+        FloatTask toBeAdded = helper.getFoodFromChinatown();
+        TaskManager expectedAB = new TaskManager();
+        expectedAB.addTask(toBeAdded);
+        model.addTask(toBeAdded);
+        
+        String expectedMessage = String.format(MESSAGE_INVALID_COMMAND_FORMAT, RemindCommand.MESSAGE_USAGE);
+        assertCommandBehavior("remind 1 asdf", expectedMessage, expectedAB, expectedAB.getTaskList());
+    }
+    
+    @Test
+    public void execute_remind_more_than_1_date() throws Exception {
+        TestDataHelper helper = new TestDataHelper();
+        FloatTask toBeAdded = helper.getFoodFromChinatown();
+        TaskManager expectedAB = new TaskManager();
+        expectedAB.addTask(toBeAdded);
+        model.addTask(toBeAdded);
+        
+        String expectedMessage = String.format(MESSAGE_INVALID_COMMAND_FORMAT, RemindCommand.MESSAGE_USAGE);
+        assertCommandBehavior("remind 1 14 Oct 5pm to 6pm", expectedMessage, expectedAB, expectedAB.getTaskList());
+    }
+    
+    @Test
+    public void execute_remind_successful() throws Exception {
+        // setup expectations
+        TestDataHelper helper = new TestDataHelper();
+        TestDataHelper helperTest = new TestDataHelper();
+        List<Task> threePersons = helperTest.generateTaskList(3);
+        List<Task> threePersonsTest = helperTest.generateTaskList(3);
 
+        TaskManager expectedAB = helper.generateTaskManager(threePersons);
+        String index = "1";
+        String dateTime = "13 dec 7pm";
+        int offsetIndex = Integer.parseInt(index) - 1;
+        
+        List<Date> dates = DateParser.parse(dateTime);
+        Task taskToEdit = expectedAB.getUniqueTaskList().getInternalList().get(offsetIndex);
+        String oldDetails = taskToEdit.getRemindDetailsString();
+        String name = taskToEdit.getName().fullName;
+        
+        helperTest.addToModel(model, threePersonsTest);
+        expectedAB.editTaskRemindDate(offsetIndex, dates.get(0));
+        Task editedTask = expectedAB.getUniqueTaskList().getInternalList().get(offsetIndex);
+        String newDetails = editedTask.getRemindDetailsString();
+        // execute command and verify result
+        assertCommandBehavior(
+                "remind " + index + " " + dateTime,
+                String.format(RemindCommand.MESSAGE_EDIT_TASK_SUCCESS, name + " " + oldDetails + " -> " + newDetails),
+                expectedAB,
+                expectedAB.getTaskList());
+    }
 ```
