--- a/collated/test/A0140047U.md
+++ b/collated/test/A0140047U.md
@@ -1,7 +1,136 @@
 # A0140047U
+###### \java\guitests\ChangeDirectoryCommandTest.java
+``` java
+//Tests for change in directory
+public class ChangeDirectoryCommandTest extends TaskManagerGuiTest {
+    
+    private static final String TEST_DATA_FOLDER = "src" + File.separator + "test" +
+            File.separator + "data" + File.separator + "StorageDirectoryUtilTest";
+    
+    private Config config;
+    private String taskManagerDirectory;
+    
+    //Change to an invalid directory
+    @Test
+    public void changeDirectory_invalidDirectory_incorrectCommand() {
+        String command = ChangeDirectoryCommand.COMMAND_WORD + " /i/n/v/a/l/i/d";
+        assertChangeDirectoryInvalidDirectory(command);
+    }
+    
+    //Change to a valid directory
+    @Test
+    public void changeDirectory_validFormat_directoryChanged() throws DataConversionException, IOException {
+        String command = ChangeDirectoryCommand.COMMAND_WORD + " " + TEST_DATA_FOLDER;
+        assertChangeDirectorySuccess(command);
+    }
+    
+    private void assertChangeDirectorySuccess(String command) throws DataConversionException, IOException {
+        commandBox.runCommand(command);
+        config = ConfigUtil.readConfig(Config.DEFAULT_CONFIG_FILE).get();
+        assertTrue(config.getTaskManagerFileDirectory().contains(TEST_DATA_FOLDER.substring(0, TEST_DATA_FOLDER.length() - 1)));
+        restoreStorage();
+    }
+    
+    private void assertChangeDirectoryInvalidDirectory(String command) {
+        commandBox.runCommand(command);
+        assertUnsuccessfulMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, ChangeDirectoryCommand.MESSAGE_USAGE));
+    }
+    
+    //Stores original taskManager directory and file name
+    @Before
+    public void setUp() throws DataConversionException {
+        config = ConfigUtil.readConfig(Config.DEFAULT_CONFIG_FILE).get();
+        taskManagerDirectory = config.getTaskManagerFileDirectory();
+    }
+    
+    //Restores original taskManager directory
+    public void restoreStorage() throws IOException {
+        commandBox.runCommand(ChangeDirectoryCommand.COMMAND_WORD + " " + taskManagerDirectory);
+    }
+}
+```
+###### \java\guitests\OpenFileCommandTest.java
+``` java
+//Test for opening a new file
+public class OpenFileCommandTest extends TaskManagerGuiTest {
+    
+    private static final String TEST_DATA_FOLDER = "src" + File.separator + "test" +
+            File.separator + "data" + File.separator + "StorageDirectoryUtilTest" + File.separator;
+    
+    private static final String INEXISTENT_FILE = " Inexistent.xml";
+    private static final String INVALID_FILE = "InvalidFormatTaskManager.xml";
+    private static final String VALID_FILE = "ValidFormatTaskManager.xml";
+    
+    private Config config;
+    private String taskManagerDirectory;
+    private String taskManagerFileName;
+    
+    //Open an inexistent file
+    @Test
+    public void openFile_inexistentFile_incorrectCommand() {
+        String command = OpenFileCommand.COMMAND_WORD + INEXISTENT_FILE;
+        assertOpenFileInexistentFile(command);
+    }
+    
+    //Open an invalid file
+    @Test
+    public void openFile_invalidFile_errorMessageShown() {
+        String command = OpenFileCommand.COMMAND_WORD + " " + TEST_DATA_FOLDER + INVALID_FILE;
+        assertOpenFileInvalidFile(command);
+    }
+    
+    //Open a valid file
+    @Test
+    public void openFile_validFormat_FileOpened() throws DataConversionException {
+        String command = OpenFileCommand.COMMAND_WORD + " " + TEST_DATA_FOLDER + VALID_FILE;
+        assertOpenFileSuccess(command);
+    }
+    
+    private void assertOpenFileSuccess(String command) throws DataConversionException {
+        commandBox.runCommand(command);
+        config = ConfigUtil.readConfig(Config.DEFAULT_CONFIG_FILE).get();
+        assertTrue(config.getTaskManagerFileDirectory().contains(TEST_DATA_FOLDER.substring(0, TEST_DATA_FOLDER.length() - 1)));
+        assertEquals(config.getTaskManagerFileName(), VALID_FILE);
+    }
+    
+    private void assertOpenFileInexistentFile(String command) {
+        commandBox.runCommand(command);
+        assertUnsuccessfulMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, OpenFileCommand.MESSAGE_USAGE));
+    }
+    
+    private void assertOpenFileInvalidFile(String command) {
+        commandBox.runCommand(command);
+        assertUnsuccessfulMessage(OpenFileCommand.MESSAGE_FAILURE);
+    }
+    
+    //Stores original taskManager directory and file name
+    @Before
+    public void setUp() throws DataConversionException {
+        config = ConfigUtil.readConfig(Config.DEFAULT_CONFIG_FILE).get();
+        taskManagerDirectory = config.getTaskManagerFileDirectory();
+        taskManagerFileName = config.getTaskManagerFileName();
+    }
+    
+    //Restores original taskManager directory and file name
+    @After
+    public void tearDown() throws IOException {
+        config.setTaskManagerFileDirectory(taskManagerDirectory);
+        config.setTaskManagerFileName(taskManagerFileName);
+        ConfigUtil.saveConfig(config, Config.DEFAULT_CONFIG_FILE);
+    }
+}
+```
 ###### \java\guitests\RedoCommandTest.java
 ``` java
 public class RedoCommandTest extends TaskManagerGuiTest {
+    
+    private static String TEST_DATA_FOLDER = FileUtil.getPath("./src/test/data/StorageDirectoryUtilTest/");
+    private static String TEST_DATA_FILE = TEST_DATA_FOLDER + "ValidFormatTaskManager.xml";
+    
+    private Config config;
+    private String taskManagerDirectory;
+    private String taskManagerFileName;
+    
     @Test
     public void redo() {
         Task[] currentList = td.getTypicalTasks();
@@ -19,6 +148,25 @@ public class RedoCommandTest extends TaskManagerGuiTest {
         commandBox.runCommand(RemoveCommand.COMMAND_WORD + " 1");
         currentList = TestUtil.removeTaskFromList(currentList, 1);
         assertRedoSuccess(RedoCommand.MESSAGE_NOTHING_TO_REDO, currentList);
+        
+        //Redo after undo of storage directory change
+        try {
+            commandBox.runCommand(ChangeDirectoryCommand.COMMAND_WORD + " " + TEST_DATA_FOLDER);
+            commandBox.runCommand(UndoCommand.COMMAND_WORD);
+            assertRedoDirectorySuccess(RedoCommand.MESSAGE_SUCCESS);
+            restoreStorage();
+        } catch (DataConversionException | IOException e) {
+            e.printStackTrace();
+        }
+        
+        //Redo after undo of file storage change
+        try {
+            commandBox.runCommand(OpenFileCommand.COMMAND_WORD + " " + TEST_DATA_FILE);
+            commandBox.runCommand(UndoCommand.COMMAND_WORD);
+            assertRedoFileStorageSuccess(RedoCommand.MESSAGE_SUCCESS);
+        } catch (DataConversionException e) {
+            e.printStackTrace();
+        }
     }
     
     private void assertRedoSuccess(String message, Task... expectedHits) {
@@ -28,12 +176,55 @@ public class RedoCommandTest extends TaskManagerGuiTest {
         assertTrue(taskListPanel.isListMatching(expectedHits.length));
         assertSuccessfulMessage(message);
     }
+    
+    //Assertion for redo in change of directory
+    private void assertRedoDirectorySuccess(String message) throws DataConversionException {
+        commandBox.runCommand(RedoCommand.COMMAND_WORD);
+        Config config = ConfigUtil.readConfig(Config.DEFAULT_CONFIG_FILE).get();
+        assertTrue(config.getTaskManagerFileDirectory().contains(TEST_DATA_FOLDER.substring(0, TEST_DATA_FOLDER.length() - 1)));
+        assertSuccessfulMessage(message);
+    }
+  
+    //Assertion for redo in change of file storage
+    private void assertRedoFileStorageSuccess(String message) throws DataConversionException {
+        commandBox.runCommand(RedoCommand.COMMAND_WORD);
+        Config config = ConfigUtil.readConfig(Config.DEFAULT_CONFIG_FILE).get();
+        assertTrue(config.getTaskManagerFilePath().contains(TEST_DATA_FILE.substring(0, TEST_DATA_FILE.length() - 1)));
+        assertSuccessfulMessage(message);
+    }
+    
+    //Restores original taskManager directory
+    public void restoreStorage() throws IOException {
+        commandBox.runCommand(ChangeDirectoryCommand.COMMAND_WORD + " " + taskManagerDirectory);
+    }
+    
+    //Stores original taskManager directory and file name
+    @Before
+    public void setUp() throws DataConversionException {
+        config = ConfigUtil.readConfig(Config.DEFAULT_CONFIG_FILE).get();
+        taskManagerDirectory = config.getTaskManagerFileDirectory();
+        taskManagerFileName = config.getTaskManagerFileName();
+    }
+    
+    //Restores original taskManager directory and file name
+    @After
+    public void tearDown() throws IOException {
+        config.setTaskManagerFileDirectory(taskManagerDirectory);
+        config.setTaskManagerFileName(taskManagerFileName);
+        ConfigUtil.saveConfig(config, Config.DEFAULT_CONFIG_FILE);
+    }
 }
 ```
 ###### \java\guitests\UndoCommandTest.java
 ``` java
 public class UndoCommandTest extends TaskManagerGuiTest {
 
+    private static String TEST_DATA_FOLDER = FileUtil.getPath("./src/test/data/StorageDirectoryUtilTest/");
+    private static String TEST_DATA_FILE = TEST_DATA_FOLDER + "ValidFormatTaskManager.xml";
+    
+    private Config config;
+    private String taskManagerPath;
+    
     @Test
     public void undo() {
         Task[] currentList = td.getTypicalTasks();
@@ -70,6 +261,22 @@ public class UndoCommandTest extends TaskManagerGuiTest {
         commandBox.runCommand(UndoCommand.COMMAND_WORD);
         commandBox.runCommand(RedoCommand.COMMAND_WORD);
         assertUndoSuccess(currentList);
+        
+        //Undo after storage directory change
+        try {
+            commandBox.runCommand(ChangeDirectoryCommand.COMMAND_WORD + " " + TEST_DATA_FOLDER);
+            assertUndoStorageSuccess(UndoCommand.MESSAGE_SUCCESS);
+        } catch (DataConversionException e) {
+            e.printStackTrace();
+        }
+
+        //Undo after file storage change
+        try {
+            commandBox.runCommand(OpenFileCommand.COMMAND_WORD + " " + TEST_DATA_FILE);
+            assertUndoStorageSuccess(UndoCommand.MESSAGE_SUCCESS);
+        } catch (DataConversionException e) {
+            e.printStackTrace();
+        }
     }
     
     private void assertUndoSuccess(Task... expectedHits) {
@@ -79,5 +286,143 @@ public class UndoCommandTest extends TaskManagerGuiTest {
         assertListSize(expectedHits.length);
         assertTrue(taskListPanel.isListMatching(expectedHits.length));
     }
+    
+    //Assertion for undo in change of directory
+    private void assertUndoStorageSuccess(String message) throws DataConversionException {
+        commandBox.runCommand(UndoCommand.COMMAND_WORD);
+        
+        Config config = ConfigUtil.readConfig(Config.DEFAULT_CONFIG_FILE).get();
+        assertTrue(config.getTaskManagerFilePath().equals(taskManagerPath));
+        assertSuccessfulMessage(message);
+    }
+  
+    @Before
+    public void setUp() throws DataConversionException {
+        config = ConfigUtil.readConfig(Config.DEFAULT_CONFIG_FILE).get();
+        taskManagerPath = config.getTaskManagerFilePath();
+    }
 }
+```
+###### \java\taskle\commons\util\StorageUtilTest.java
+``` java
+public class StorageUtilTest {
+
+    private Config config;
+    private String taskManagerDirectory;
+    private String taskManagerFileName;
+    
+    private final static String TEST_FILE_DIRECTORY = "directory";
+    private final static String TEST_FILE_FILENAME = "file.txt";
+    
+    private static final String TEST_DATA_FOLDER = FileUtil.getPath("./src/test/data/StorageDirectoryUtilTest/");
+    private static final File VALID_FILE = new File(TEST_DATA_FOLDER + "ValidFormatTaskManager.xml");
+    private static final File INVALID_FILE = new File(TEST_DATA_FOLDER + "InvalidFormatTaskManager.xml");
+    
+    @Rule
+    public ExpectedException thrown = ExpectedException.none();
+    
+    @Rule
+    public TemporaryFolder saveFolder = new TemporaryFolder();
+    
+    //Change to a null directory - Shows Assertion Error
+    @Test
+    public void updateDirectory_nullDirectory_assertionError() {
+        thrown.expect(AssertionError.class);
+        StorageUtil.updateDirectory(null);
+    }
+    
+    //Change to a valid directory - Successfully Update
+    @Test
+    public void updateDirectory_validDirectory_directoryChanged() throws IOException, DataConversionException {
+        StorageUtil.updateDirectory(new File(TEST_DATA_FOLDER));
+        config = ConfigUtil.readConfig(Config.DEFAULT_CONFIG_FILE).get();
+        assertTrue(config.getTaskManagerFileDirectory().contains(TEST_DATA_FOLDER.substring(0, TEST_DATA_FOLDER.length() - 1)));
+        restoreStorage();
+    }
+    
+    //Change to a null file - Assertion Error
+    @Test
+    public void updateFile_nullFile_assertionError() {
+        thrown.expect(AssertionError.class);
+        StorageUtil.updateFile(null);
+    }
+    
+    //Change to file of invalid format - Returns False
+    @Test
+    public void updateFile_invalidFileFormat_returnsFalse() {
+        boolean isFileUpdated = StorageUtil.updateFile(INVALID_FILE);
+        assertFalse(isFileUpdated);
+    }
+    
+    //Change to a valid file - Successfully Update
+    @Test
+    public void updateFile_validFile_FileChanged() throws DataConversionException {
+        StorageUtil.updateFile(VALID_FILE);
+        config = ConfigUtil.readConfig(Config.DEFAULT_CONFIG_FILE).get();
+        assertTrue(config.getTaskManagerFileDirectory().contains(TEST_DATA_FOLDER.substring(0, TEST_DATA_FOLDER.length() - 1)));
+        assertEquals(config.getTaskManagerFileName(), "ValidFormatTaskManager.xml");
+    }
+    
+    //Split a null object - Assertion Error
+    @Test
+    public void splitFilePath_nullFilePath_assertionError() {
+        thrown.expect(AssertionError.class);
+        StorageUtil.splitFilePath(null);
+    }
+    
+    //Split an invalid String file path format - IndexOutOfBoundsException
+    @Test
+    public void splitFilePath_invalidFilePath_indexOutOfBoundsException() {
+        thrown.expect(IndexOutOfBoundsException.class);
+        StorageUtil.splitFilePath("");
+    }
+    
+    //Split a valid String file path format
+    @Test
+    public void splitFilePath_validFilePath_filePathSuccess() {
+        String[] sampleFilePath = StorageUtil.splitFilePath(TEST_FILE_DIRECTORY + File.separator +
+                TEST_FILE_FILENAME);
+        assertEquals(sampleFilePath[0], TEST_FILE_DIRECTORY);
+        assertEquals(sampleFilePath[1], TEST_FILE_FILENAME);
+    }
+    
+    //Stores original taskManager directory and file name
+    @Before
+    public void setUp() throws DataConversionException {
+        config = ConfigUtil.readConfig(Config.DEFAULT_CONFIG_FILE).get();
+        taskManagerDirectory = config.getTaskManagerFileDirectory();
+        taskManagerFileName = config.getTaskManagerFileName();
+    }
+    
+    //Restores original taskManager directory and file name
+    @After
+    public void tearDown() throws IOException {
+        config.setTaskManagerFileDirectory(taskManagerDirectory);
+        config.setTaskManagerFileName(taskManagerFileName);
+        ConfigUtil.saveConfig(config, Config.DEFAULT_CONFIG_FILE);
+    }
+    
+    //Restores original taskManager directory
+    public void restoreStorage() throws IOException {
+        StorageUtil.updateDirectory(new File(taskManagerDirectory));
+    }
+}
+```
+###### \java\taskle\storage\StorageManagerTest.java
+``` java
+    //Sets TaskManager File Path based on null value - should result in assertion error
+    @Test
+    public void setTaskManagerFilePath_nullValue_assertionError() {
+        thrown.expect(AssertionError.class);
+        storageManager.setTaskManagerFilePath(null);
+    }
+    
+    //Sets TaskManager File Path - StorageLocationChangedEvent should be raised
+    @Test
+    public void setTaskManagerFilePath_validPath_raiseEvent() {
+        EventsCollector eventCollector = new EventsCollector();
+        storageManager.setTaskManagerFilePath(TEMP_PATH);
+        assertTrue(eventCollector.get(0) instanceof StorageChangedEvent);
+    }
+
 ```
