--- a/collated/test/A0141780J.md
+++ b/collated/test/A0141780J.md
@@ -33,29 +33,22 @@ public class AddCommandTest extends TaskManagerGuiTest {
         assertUnsuccessfulMessage(Messages.MESSAGE_UNKNOWN_COMMAND);
         
         //valid deadline add command
-        taskToAdd = td.finalExams;
+        taskToAdd = td.assignmentDeadline;
         assertAddSuccess(taskToAdd, currentList);
         currentList = TestUtil.addTasksToList(currentList, taskToAdd);
         
+        //valid event add command
+        taskToAdd = td.charityEvent;
+        assertAddSuccess(taskToAdd, currentList);
+        currentList = TestUtil.addTasksToList(currentList, taskToAdd);
+
         //Invalid event add format
         commandBox.runCommand("add watch movie with friends by 7pm to 9pm");
         assertUnsuccessfulMessage(String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, 
                 AddCommand.MESSAGE_USAGE));
+        
     }
     
-    private void assertAddSuccess(Task taskToAdd, Task... currentList) {
-        commandBox.runCommand(AddCommand.COMMAND_WORD + " "
-                + taskToAdd.toString());
-        //confirm the new card contains the right data
-        TaskCardHandle addedCard = taskListPanel.navigateToTask(taskToAdd.getName().fullName);
-        assertMatching(taskToAdd, addedCard);
-
-        //confirm the list now contains all previous tasks plus the new task
-        Task[] expectedList = TestUtil.addTasksToList(currentList, taskToAdd);
-        assertTrue(taskListPanel.isListMatching(expectedList));
-    }
-
-}
 ```
 ###### \java\guitests\FindCommandTest.java
 ``` java
@@ -268,148 +261,6 @@ public class DateParserTest {
                 expectedAB.getTaskList());
 
     }
-    
-    @Test
-    public void execute_addEventWithDates_successful() throws Exception {
-        // setup expectations
-        TestDataHelper helper = new TestDataHelper();
-        EventTask toBeAdded = helper.finalExams();
-        TaskManager expectedAB = new TaskManager();
-        expectedAB.addTask(toBeAdded);
-
-        // execute command and verify result
-        assertCommandBehavior(
-                helper.generateAddCommandWithDate(toBeAdded, 
-                        helper.ADD_SUCCESSFUL_EVENT_DATE),
-                String.format(AddCommand.MESSAGE_SUCCESS, toBeAdded),
-                expectedAB,
-                expectedAB.getTaskList());
-    }
-    
-    @Test
-    public void execute_addDeadlineWithDates_successful() throws Exception {
-        // setup expectations
-        TestDataHelper helper = new TestDataHelper();
-        DeadlineTask toBeAdded = helper.finishAssignment();
-        TaskManager expectedAB = new TaskManager();
-        expectedAB.addTask(toBeAdded);
-
-        // execute command and verify result
-        assertCommandBehavior(
-                helper.generateAddCommandWithDate(toBeAdded, 
-                        helper.ADD_SUCCESSFUL_DEADLINE_DATE),
-                String.format(AddCommand.MESSAGE_SUCCESS, toBeAdded),
-                expectedAB,
-                expectedAB.getTaskList());
-    }
-    
-    @Test
-    public void execute_addEventTmr_successful() throws Exception {
-        // setup expectations
-        TestDataHelper helper = new TestDataHelper();
-        EventTask toBeAdded = helper.tutorialTmr();
-        TaskManager expectedAB = new TaskManager();
-        expectedAB.addTask(toBeAdded);
-
-        // execute command and verify result
-        assertCommandBehavior(
-                helper.generateAddCommandWithDate(toBeAdded, 
-                        helper.ADD_TMR_SUCCESSFUL_DATE),
-                String.format(AddCommand.MESSAGE_SUCCESS, toBeAdded),
-                expectedAB,
-                expectedAB.getTaskList());
-    }
-    
-    @Test
-    public void execute_addGardensByBay_successful() throws Exception {
-        // setup expectations
-        TestDataHelper helper = new TestDataHelper();
-        EventTask toBeAdded = helper.gardensByTheBay();
-        TaskManager expectedAB = new TaskManager();
-        expectedAB.addTask(toBeAdded);
-
-        // execute command and verify result
-        assertCommandBehavior(
-                helper.ADD_COMMAND_GARDENS_BY_BAY,
-                String.format(AddCommand.MESSAGE_SUCCESS, toBeAdded),
-                expectedAB,
-                expectedAB.getTaskList());
-    }
-    
-    @Test
-    public void execute_addEventOnSingleDate_successful() throws Exception {
-        // setup expectations
-        TestDataHelper helper = new TestDataHelper();
-        EventTask toBeAdded = helper.newYearDay();
-        TaskManager expectedAB = new TaskManager();
-        expectedAB.addTask(toBeAdded);
-
-        // execute command and verify result
-        assertCommandBehavior(
-                helper.ADD_COMMAND_NEW_YEAR_DAY,
-                String.format(AddCommand.MESSAGE_SUCCESS, toBeAdded),
-                expectedAB,
-                expectedAB.getTaskList());
-    }
-    
-    @Test
-    public void execute_addFloatTaskWithDelimiter_successful() throws Exception {
-        // setup expectations
-        TestDataHelper helper = new TestDataHelper();
-        FloatTask toBeAdded = helper.getFoodFromChinatown();
-        TaskManager expectedAB = new TaskManager();
-        expectedAB.addTask(toBeAdded);
-
-        // execute command and verify result
-        assertCommandBehavior(
-                helper.generateAddCommand(toBeAdded),
-                String.format(AddCommand.MESSAGE_SUCCESS, toBeAdded),
-                expectedAB,
-                expectedAB.getTaskList());
-    }
-    
-    @Test
-    public void execute_addDeadlineTaskMorethanTwoDates_returnIncorrectCommand() 
-            throws Exception {
-        // setup expectations
-        TestDataHelper helper = new TestDataHelper();
-        FloatTask toBeAdded = helper.adam();
-        TaskManager expectedAB = new TaskManager();
-        expectedAB.addTask(toBeAdded);
-
-        // setup starting state
-        model.addTask(toBeAdded); // task already in internal task manager
-
-        // execute command and verify result
-        assertCommandBehavior(
-                helper.ADD_COMMAND_GET_DOCS_FROM_BOB,
-                String.format(MESSAGE_INVALID_COMMAND_FORMAT, 
-                              AddCommand.MESSAGE_USAGE),
-                expectedAB,
-                expectedAB.getTaskList());
-
-    }
-
-    @Test
-    public void execute_addDuplicate_allowed() throws Exception {
-        // setup expectations
-        TestDataHelper helper = new TestDataHelper();
-        FloatTask toBeAdded = helper.adam();
-        TaskManager expectedAB = new TaskManager();
-        expectedAB.addTask(toBeAdded);
-        expectedAB.addTask(toBeAdded);
-
-        // setup starting state
-        model.addTask(toBeAdded); // task already in internal task manager
-
-        // execute command and verify result
-        assertCommandBehavior(
-                helper.generateAddCommand(toBeAdded),
-                String.format(AddCommand.MESSAGE_SUCCESS, toBeAdded),
-                expectedAB,
-                expectedAB.getTaskList());
-
-    }
 ```
 ###### \java\taskle\logic\LogicManagerTest.java
 ``` java
@@ -487,7 +338,7 @@ public class DateParserTest {
         calendar.set(2016, 11, 01);
         Date deadlineDate = calendar.getTime();
         Task deadlineTask = new DeadlineTask(
-                new Name("Get soap to wash car"), deadlineDate, new UniqueTagList());
+                new Name("Get soap to wash car"), deadlineDate);
 
         List<Task> allTasks = helper.generateTaskList(task1, task2, deadlineTask);
         TaskManager expectedAB = helper.generateTaskManager(allTasks);
@@ -535,8 +386,7 @@ public class DateParserTest {
         Date deadlineDate = calendar.getTime();
         DeadlineTask task4 = new DeadlineTask(
                 new Name("Finish O levels"), 
-                deadlineDate, 
-                new UniqueTagList());
+                deadlineDate);
 
         List<Task> allTasks = helper.generateTaskList(task1, task2, task3, task4);
         helper.addToModel(model, allTasks);
@@ -564,8 +414,7 @@ public class DateParserTest {
         Date deadlineDate = calendar.getTime();
         DeadlineTask task4 = new DeadlineTask(
                 new Name("Finish O levels"), 
-                deadlineDate, 
-                new UniqueTagList());
+                deadlineDate);
 
         List<Task> allTasks = helper.generateTaskList(task1, task2, task3, task4);
         helper.addToModel(model, allTasks);
@@ -578,25 +427,105 @@ public class DateParserTest {
                 expectedAB,
                 expectedList);
     }
+    
+    @Test
+    public void executeShortCommand_validList_returnsList() throws Exception {
+        // prepare 1 done task, 2 pending task, 1 deadline task
+        TestDataHelper helper = new TestDataHelper();
+        Task task1 = helper.generateTaskWithName("Buy groceries");
+        task1.setTaskDone(true);
+        
+        Task task2 = helper.generateTaskWithName("Do homework");
+        Task task3 = helper.generateTaskWithName("Conduct meeting");
+        
+        Calendar calendar = Calendar.getInstance();
+        calendar.clear();
+        calendar.set(2010, 11, 01);
+        Date deadlineDate = calendar.getTime();
+        DeadlineTask task4 = new DeadlineTask(
+                new Name("Finish O levels"), 
+                deadlineDate);
+
+        // Generate list from prepared tasks and add to model and expectations.
+        List<Task> allTasks = helper.generateTaskList(task1, task2, task3, task4);
+        helper.addToModel(model, allTasks);
+        TaskManager expectedAB = helper.generateTaskManager(allTasks);
+        List<Task> expectedList = helper.generateTaskList(task2, task3);
+
+        assertCommandBehavior("l -pending",
+                String.format(ListCommand.MESSAGE_LIST_SUCCESS, "Pending, Not Done, Not Overdue"),
+                expectedAB,
+                expectedList);
+    }
+    
+    @Test
+    public void executeShortCommand_validAdd_addsSuccessfully() throws Exception {
+        // prepare 1 task for add
+        TestDataHelper helper = new TestDataHelper();
+        Task toAdd = helper.generateTaskWithName("Buy eggs");
+        
+        TaskManager expectedAB = new TaskManager();
+        expectedAB.addTask(toAdd);
+        List<ReadOnlyTask> expectedList = expectedAB.getTaskList();
+
+        assertCommandBehavior("a Buy eggs",
+                String.format(AddCommand.MESSAGE_SUCCESS, toAdd),
+                expectedAB,
+                expectedList);
+    }
+    
+    @Test
+    public void executeShortCommand_validRemove_removesSuccessfully() throws Exception {
+        // prepare 1 task for add
+        TestDataHelper helper = new TestDataHelper();
+        Task toRemove = helper.generateTaskWithName("Buy eggs");
+        
+        List<Task> allTasks = helper.generateTaskList(toRemove);
+        
+        TaskManager expectedAB = new TaskManager();
+        List<ReadOnlyTask> expectedList = expectedAB.getTaskList();
+        helper.addToModel(model, allTasks);
+
+        assertCommandBehavior("rm 1",
+                String.format(RemoveCommand.MESSAGE_DELETE_TASK_SUCCESS, 1),
+                expectedAB,
+                expectedList);
+    }
+    
 ```
 ###### \java\taskle\logic\LogicManagerTest.java
 ``` java
         private final Calendar CALENDAR = Calendar.getInstance();
+        private final String ADD_SUCCESSFUL_FLOAT_REMINDER = " remind 12 sep 2016 10am";
         private final String ADD_SUCCESSFUL_EVENT_DATE = " from 12 sep 2016 10am to 12 sep 2016 1pm";
+        private final String ADD_SUCCESSFUL_EVENT_REMINDER = " from 12 sep 2016 10am to 12 sep 2016 1pm remind 10 sep 2016 10am";
         private final String ADD_SUCCESSFUL_DEADLINE_DATE = " by 31st Dec 2016 2359hours";
+        private final String ADD_SUCCESSFUL_DEADLINE_REMINDER = " by 31st Dec 2016 2359hours remind 29th Dec 2016 2359hours";
         private final String ADD_TMR_SUCCESSFUL_DATE = " from tmr 1 to 2pm";
         private final String ADD_COMMAND_GARDENS_BY_BAY = 
                 "add Gardens by the Bay outing from 12pm to 2pm 3 December";
         private final String ADD_COMMAND_NEW_YEAR_DAY = 
                 "add New Year Day from 1 jan 2017";
+        private final String ADD_COMMAND_NEW_YEAR_DAY_WITH_INVALID_REMINDER = 
+                "add New Year Day from 1 jan 2017 remind 31 dec 2016 5pm to 31 dec 2016 6pm";
         private final String ADD_COMMAND_GET_DOCS_FROM_BOB = 
                 "add Get documents from Bob by 14 Apr to 15 Apr";
-        
-        UniqueTagList stubTagList = new UniqueTagList();
+        private final String ADD_COMMAND_GET_DOCS_FROM_BOB_WITH_INVALID_REMINDER = 
+                "add Get documents from Bob by 14 Apr to 15 Apr remind 13 Apr to 14 Apr";
+        private final String ADD_COMMAND_REMIND_PAPA = 
+                "add remind papa";
 
         FloatTask adam() throws Exception {
             Name name = new Name("Adam Brown");
-            return new FloatTask(name, stubTagList);
+            return new FloatTask(name);
+        }
+        
+        
+        FloatTask homeworkWithReminder() throws Exception {
+            Name name = new Name("Do homework for CS2103T");
+            CALENDAR.set(2016, 8, 12, 10, 00, 00);
+            Date remindDate = CALENDAR.getTime();
+            return new FloatTask(name, remindDate);
         }
         
         EventTask finalExams() throws Exception {
@@ -605,15 +534,48 @@ public class DateParserTest {
             Date startDate = CALENDAR.getTime();
             CALENDAR.set(2016, 8, 12, 13, 00, 00);
             Date endDate = CALENDAR.getTime();
-            return new EventTask(name, startDate, endDate, stubTagList);
+            return new EventTask(name, startDate, endDate);
         }
+        
+        EventTask finalExamsWithReminder() throws Exception {
+            Name name = new Name("Final Exams");
+            CALENDAR.set(2016, 8, 12, 10, 00, 00);
+            Date startDate = CALENDAR.getTime();
+            CALENDAR.set(2016, 8, 12, 13, 00, 00);
+            Date endDate = CALENDAR.getTime();
+            CALENDAR.set(2016, 8, 10, 10, 00, 00);
+            Date remindDate = CALENDAR.getTime();
+            return new EventTask(name, startDate, endDate, remindDate);
+        }
+        
+        EventTask getDocsFromBobWithReminder() throws Exception {
+            Name name = new Name("Get documents from Bob");
+            CALENDAR.set(2016, 3, 14, 00, 00, 00);
+            Date startDate = CALENDAR.getTime();
+            CALENDAR.set(2016, 3, 15, 00, 00, 00);
+            Date endDate = CALENDAR.getTime();
+            CALENDAR.set(2016, 3, 13, 00, 00, 00);
+            Date remindDate = CALENDAR.getTime();
+            return new EventTask(name, startDate, endDate, remindDate);
+        }
+        
         
         DeadlineTask finishAssignment() throws Exception {
             Name name = new Name("Finish Assignment");
             CALENDAR.set(2016, 11, 31, 23, 59, 00);
             Date byDate = CALENDAR.getTime();
-            return new DeadlineTask(name, byDate, stubTagList);
+            return new DeadlineTask(name, byDate);
         }
+        
+        DeadlineTask finishAssignmentWithReminder() throws Exception {
+            Name name = new Name("Finish Assignment");
+            CALENDAR.set(2016, 11, 31, 23, 59, 00);
+            Date byDate = CALENDAR.getTime();
+            CALENDAR.set(2016, 11, 29, 23, 59, 00);
+            Date remindDate = CALENDAR.getTime();
+            return new DeadlineTask(name, byDate, remindDate);
+        }
+        
         
         EventTask tutorialTmr() throws Exception {
             Name name = new Name("2103T tutorial");
@@ -627,7 +589,7 @@ public class DateParserTest {
             Date startDate = calendar.getTime();
             calendar.set(Calendar.HOUR_OF_DAY, 14);
             Date endDate = calendar.getTime();
-            return new EventTask(name, startDate, endDate, stubTagList);
+            return new EventTask(name, startDate, endDate);
         }
         
         EventTask gardensByTheBay() throws Exception {
@@ -637,7 +599,7 @@ public class DateParserTest {
             Date startDate = calendar.getTime();
             calendar.add(Calendar.HOUR_OF_DAY, 2);
             Date endDate = calendar.getTime();
-            return new EventTask(name, startDate, endDate, stubTagList);
+            return new EventTask(name, startDate, endDate);
         }
         
         EventTask newYearDay() throws Exception {
@@ -645,12 +607,12 @@ public class DateParserTest {
             Calendar calendar = Calendar.getInstance();
             calendar.set(2017, 0, 1, 0, 0);
             Date onDate = calendar.getTime();
-            return new EventTask(name, onDate, onDate, stubTagList);
+            return new EventTask(name, onDate, onDate);
         }
         
         FloatTask getFoodFromChinatown() throws Exception {
             Name name = new Name("Get food from Chinatown");
-            return new FloatTask(name, stubTagList);
+            return new FloatTask(name);
         }
 
         /**
@@ -662,7 +624,7 @@ public class DateParserTest {
          */
         Task generateTask(int seed) throws Exception {
             return new FloatTask(
-                    new Name("Task " + seed), stubTagList);
+                    new Name("Task " + seed));
         }
 
         /** Generates the correct add command based on the task given */
