--- a/collated/docs/A0140047U.md
+++ b/collated/docs/A0140047U.md
@@ -355,12 +355,12 @@ Edits an existing task in Taskle. There are 3 types of edits possible: Edit task
 Type | Format  
 :-------- | :-------- 
 Edit task name | `edit `**`task_number new_task_name`**  
-Reschedule | `reschedule `**`task_number` `date`**`[`**`time`**`] to ` **`date`**`[`**`time`**`] [remind `**`date time`**`]`
-Remind | `remind `**`task_number` `date time`**
+Reschedule | `reschedule `**`task_number date`**`[`**`time`**`] to ` **`date`**`[`**`time`**`] [remind `**`date time`**`]`
+Remind | `remind `**`task_number date`**`[`**` time`**`]`
 
 > **Things to Note**
 > * A  task can only have one reminder. The date and time as specified in the "remind" command would replace any existing reminder.
-> * **Time** must be specified for reminders so that Taskle can remind you based on the time given.
+> * If **Time** is not specified for reminders, Taskle will automatically assign the reminder time as 00:00 for the specified reminder date.
 > * To remove a reminder or deadline from a task, you will have to type **"clear"** after typing the task number. For example:
 >	* remind **2 clear**
 >	* reschedule **2 clear**
@@ -416,7 +416,7 @@ tasks to be displayed are the pending and overdue ones. (Done tasks are not show
 >	* list **-pending** **-overdue**
 
 Example:
-* `list` **`5`** **`-all`**
+* `list` **`-all`**
 
 <br>
 
